@@ -1,20 +1,3 @@
-/* 
- * RealmSpeak is the Java application for playing the board game Magic Realm.
- * Copyright (c) 2005-2015 Robin Warren
- * E-mail: robin@dewkid.com
- * 
- * This program is free software: you can redistribute it and/or modify it under the terms of the
- * GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
- * or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- * implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
- * for more details.
- * 
- * You should have received a copy of the GNU General Public License along with this program. If not, see
- *
- * http://www.gnu.org/licenses/
- */
 package com.robin.general.swing;
 
 import javax.swing.*;
@@ -48,7 +31,7 @@ public class IntegerField extends JTextField {
 	public int getInt() {
 		String text = getText();
 		if (text.length()>0) {
-			return Integer.valueOf(getText()).intValue();
+			return Integer.parseInt(getText());
 		}
 		return 0;
 	}
@@ -57,6 +40,6 @@ public class IntegerField extends JTextField {
 		if (text.length()>0) {
 			return Integer.valueOf(text);
 		}
-		return new Integer(0);
+		return Integer.valueOf(0);
 	}
 }
