@@ -1,20 +1,3 @@
-/* 
- * RealmSpeak is the Java application for playing the board game Magic Realm.
- * Copyright (c) 2005-2015 Robin Warren
- * E-mail: robin@dewkid.com
- * 
- * This program is free software: you can redistribute it and/or modify it under the terms of the
- * GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
- * or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- * implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
- * for more details.
- * 
- * You should have received a copy of the GNU General Public License along with this program. If not, see
- *
- * http://www.gnu.org/licenses/
- */
 package com.robin.general.util;
 
 import java.util.*;
@@ -136,9 +119,9 @@ public class StringUtilities {
 		return ret;
 	}
 	public static String intArrayToString(int[] array,String delim) {
-		ArrayList list = new ArrayList();
+		ArrayList<Integer> list = new ArrayList<>();
 		for (int i=0;i<array.length;i++) {
-			list.add(new Integer(array[i]));
+			list.add(Integer.valueOf(array[i]));
 		}
 		return collectionToString(list,delim);
 	}
@@ -149,7 +132,7 @@ public class StringUtilities {
 		}
 		return val;
 	}
-	private static void printCollectionDebug(Collection c) {
+	private static void printCollectionDebug(Collection<String> c) {
 		System.out.println(c.size()+":  "+c);
 	}
 	public static void main(String[] args) {
