@@ -1,20 +1,3 @@
-/* 
- * RealmSpeak is the Java application for playing the board game Magic Realm.
- * Copyright (c) 2005-2015 Robin Warren
- * E-mail: robin@dewkid.com
- * 
- * This program is free software: you can redistribute it and/or modify it under the terms of the
- * GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
- * or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- * implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
- * for more details.
- * 
- * You should have received a copy of the GNU General Public License along with this program. If not, see
- *
- * http://www.gnu.org/licenses/
- */
 package com.robin.magic_realm.RealmBattle;
 
 import java.awt.*;
@@ -32,6 +15,7 @@ import com.robin.general.graphics.TextType.Alignment;
 import com.robin.general.swing.DieRoller;
 import com.robin.general.util.HashLists;
 import com.robin.magic_realm.components.*;
+import com.robin.magic_realm.components.attribute.RelationshipType;
 import com.robin.magic_realm.components.attribute.RollerResult;
 import com.robin.magic_realm.components.attribute.TileLocation;
 import com.robin.magic_realm.components.utility.Constants;
@@ -44,9 +28,10 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 	
 	public abstract boolean hasUnpositionedDenizens();
 	public abstract boolean usesMaxCombatBoxes();
+	public abstract boolean usesCombatBoxesEqually();
 	public abstract boolean needsTargetAssignment();
 	
-	protected abstract Point[] getPositions();
+	protected abstract Point[] getPositions(HostPrefWrapper hostPrefs);
 	protected abstract ImageIcon getImageIcon();
 	protected abstract void updateHotSpots();
 	protected abstract String[] splitHotSpot(int index);
@@ -55,21 +40,26 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 	protected abstract void drawRollers(Graphics g);
 	protected abstract void drawOther(Graphics g);
 	protected abstract int getDeadBoxIndex();
+	protected abstract int getBoxIndexFromCombatBoxes(int boxA, int boxD);
+	protected abstract int getBoxIndexFromCombatBoxesForDefender(int boxA, int boxD);
+	protected abstract int getBoxIndexFromCombatBoxesForDefenderTarget(int boxA, int boxD);
+	protected abstract int getBoxIndexFromCombatBoxesForAttacker(int boxA, int boxD);
+	protected abstract int getHotSpotSize();
 	
 	private Point[] positions;		// Position of every hotspot
 	private int[] offset;			// Token draw offset for every hotspot
 	protected CombatFrame combatFrame;
 	protected BattleModel model;
 	protected RealmComponent sheetOwner;
-	protected Collection sheetParticipants;
-	protected HashLists layoutHash;
-	protected Hashtable rollerHash; // indexes to rollers
+	protected Collection<RealmComponent> sheetParticipants;
+	protected HashLists<Integer,RealmComponent> layoutHash;
+	HostPrefWrapper hostPrefs;
 	
 	protected Integer mouseHoverIndex;
 	protected boolean mouseHoverShift = false;
-	protected ArrayList battleChitsWithRolls;
+	protected ArrayList<BattleChit> battleChitsWithRolls;
 	
-	protected Hashtable hotspotHash; // hotspot indices (Integer) are the key, and the value is a String
+	protected Hashtable<Integer,String> hotspotHash;
 	
 	protected RollerGroup redGroup;
 	protected RollerGroup squareGroup;
@@ -83,25 +73,26 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 	 * Testing constructor ONLY!!!
 	 */
 	protected CombatSheet() {
-		battleChitsWithRolls = new ArrayList();
-		hotspotHash = new Hashtable();
-		layoutHash = new HashLists();
+		battleChitsWithRolls = new ArrayList<>();
+		hotspotHash = new Hashtable<>();
+		layoutHash = new HashLists<>();
 		mouseHoverIndex = null;
-		positions = getPositions();
+		positions = getPositions(hostPrefs);
 		offset = new int[positions.length];
 		setIcon(getImageIcon());
 	}
-	protected CombatSheet(CombatFrame frame,BattleModel model,RealmComponent participant,boolean interactiveFrame) {
+	protected CombatSheet(CombatFrame frame,BattleModel model,RealmComponent participant,boolean interactiveFrame, HostPrefWrapper hostPrefs) {
 		super("");
 		this.combatFrame = frame;
 		this.model = model;
 		this.sheetOwner = participant;
 		this.interactiveFrame = interactiveFrame;
-		battleChitsWithRolls = new ArrayList();
-		hotspotHash = new Hashtable();
-		layoutHash = new HashLists();
+		this.hostPrefs = hostPrefs;
+		battleChitsWithRolls = new ArrayList<>();
+		hotspotHash = new Hashtable<>();
+		layoutHash = new HashLists<>();
 		mouseHoverIndex = null;
-		positions = getPositions();
+		positions = getPositions(hostPrefs);
 		offset = new int[positions.length];
 		setIcon(getImageIcon());
 		updateRollers();
@@ -121,13 +112,12 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 	/**
 	 * Gets a list of all RCs in the three boxes.  Excludes any character attacks, horses, or parts
 	 */
-	protected ArrayList getAllBoxListFromLayout(int box1) {
-		ArrayList all = new ArrayList();
+	protected ArrayList<RealmComponent> getAllBoxListFromLayout(int box1) {
+		ArrayList<RealmComponent> all = new ArrayList<>();
 		for (int i=0;i<3;i++) {
-			ArrayList list = layoutHash.getList(new Integer(box1+i));
+			ArrayList<RealmComponent> list = layoutHash.getList(Integer.valueOf(box1+i));
 			if (list!=null) {
-				for (Iterator n=list.iterator();n.hasNext();) {
-					RealmComponent rc = (RealmComponent)n.next();
+				for (RealmComponent rc : list) {
 					if (!rc.isNativeHorse() && !rc.isMonsterPart() && !rc.isActionChit()) {
 						all.add(rc);
 					}
@@ -136,7 +126,26 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		}
 		return all;
 	}
-	protected DieRoller makeRoller(String val) {
+	protected ArrayList<RealmComponent> getAllFromSingleBoxListFromLayout(int box) {
+		ArrayList<RealmComponent> all = new ArrayList<>();
+		ArrayList<RealmComponent> list = layoutHash.getList(Integer.valueOf(box));
+		if (list!=null) {
+			for (RealmComponent rc : list) {
+				if (!rc.isNativeHorse() && !rc.isMonsterPart() && !rc.isActionChit()) {
+					all.add(rc);
+				}
+			}
+		}
+		return all;
+	}
+	protected ArrayList<RealmComponent> getAllBoxListsFromLayout(Integer[] boxes) {
+		ArrayList<RealmComponent> all = new ArrayList<>();
+		for (int box : boxes) {
+			all.addAll(getAllFromSingleBoxListFromLayout(box));
+		}
+		return all;
+	}
+	protected static DieRoller makeRoller(String val) {
 		return new DieRoller(val,25,6);
 	}
 	protected boolean usesMaxCombatBoxes(int index) {
@@ -151,33 +160,64 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		
 		return total>2?boxCount==3:boxCount==total;
 	}
+	protected boolean usesCombatBoxesEqually(int index) {
+		int total = 0;
+		int boxCount = 0;
+		for (int i=index;i<index+3;i++) {
+			int count = countAttacks(i, true);
+			boxCount++;
+			total += count;
+		}
+		
+		int minAttackers = total/boxCount;
+		int maxAttackers = (total + boxCount - 1) / boxCount;
+		
+		for (int i=index;i<index+3;i++) {
+			int attacksInBox = countAttacks(i, true);
+			if (attacksInBox < minAttackers || attacksInBox > maxAttackers) {
+				return false;
+			}
+		}
+		return true;
+	}
 	/**
-	 * @return		The total number of attacks in the box:  doesn't include horses!
+	 * @return		The total number of attacks in the box
 	 */
-	protected int countAttacks(int index) {
+	protected int countAttacks(int index, boolean includeHorses) {
 		int count = 0;
-		ArrayList list = layoutHash.getList(new Integer(index));
+		ArrayList<RealmComponent> list = layoutHash.getList(Integer.valueOf(index));
 		if (list!=null) {
-			for (Iterator i=list.iterator();i.hasNext();) {
-				RealmComponent rc = (RealmComponent)i.next();
-				if (!rc.isNativeHorse() && !rc.isActionChit()) {
+			for (RealmComponent rc : list) {
+				if (rc.isWeapon() && this instanceof DenizenCombatSheet) {
+					RealmComponent holder = rc.getHeldBy();
+					if (holder!=null) {
+						RealmComponent target1 = holder.getTarget();
+						RealmComponent target2 = holder.get2ndTarget();
+						if (target1!=sheetOwner && target2!=sheetOwner) continue;
+					}
+				}
+				if ((includeHorses || !rc.isNativeHorse()) && !rc.isActionChit()) {
 					count++;
 				}
 			}
 		}
-//System.out.println(index+" "+list+" count="+count);
 		return count;
 	}
+	/**
+	 * @return		The total number of attacks in the box:  doesn't include horses!
+	 */
+	protected int countAttacks(int index) {
+		return countAttacks(index, false);
+	}
 	protected void updateBattleChitsWithRolls(CombatWrapper combat) {
-//System.out.println("updateBattleChitsWithRolls from "+combat.getGameObject().getName());
 		if ((combat.getMissileRolls()!=null && combat.getMissileRolls().size()>0)
 				|| (combat.getFumbleRolls()!=null && combat.getFumbleRolls().size()>0)) {
 			BattleChit bc = (BattleChit)RealmComponent.getRealmComponent(combat.getGameObject());
 			battleChitsWithRolls.add(bc);
 		}
 	}
-	private ArrayList getBattleRolls() {
-		ArrayList battleRolls = new ArrayList();
+	private ArrayList<RollerResult> getBattleRolls() {
+		ArrayList<RollerResult> battleRolls = new ArrayList<>();
 		if (!battleChitsWithRolls.isEmpty()) {
 			// Deduce and build all fumble/stumble rolls (in order)
 			if (combatFrame.getCurrentRound()==1) {
@@ -186,17 +226,16 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 			else {
 				Collections.sort(battleChitsWithRolls,new BattleChitSpeedComparator());
 			}
-			for (Iterator i=battleChitsWithRolls.iterator();i.hasNext();) {
-				BattleChit bc = (BattleChit)i.next();
+			for (BattleChit bc : battleChitsWithRolls) {
 				
 				RealmComponent rc = (RealmComponent)bc;
 				CombatWrapper combat = new CombatWrapper(bc.getGameObject());
 				
-				ArrayList missileResults = combat.getMissileRolls();
-				ArrayList fumbleResults = combat.getFumbleRolls();
+				ArrayList<String> missileResults = combat.getMissileRolls();
+				ArrayList<String> fumbleResults = combat.getFumbleRolls();
 				
 				String type;
-				ArrayList rs,ss;
+				ArrayList<String> rs,ss;
 				if (fumbleResults!=null) {
 					type = " Fumble";
 					rs = fumbleResults;
@@ -208,16 +247,14 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 					ss = combat.getMissileRollSubtitles();
 				}
 				
-				String prefix = (rc.isCharacter()?"":("B"+combat.getCombatBox()+" "));
-				Iterator r=rs.iterator();
-				Iterator s=ss.iterator();
+				String prefix = (rc.isCharacter()?"":("B"+combat.getCombatBoxAttack()+","+combat.getCombatBoxDefense()+" "));
+				Iterator<String> r=rs.iterator();
+				Iterator<String> s=ss.iterator();
 				while(r.hasNext()) {
-					// TODO Would be nice to recognize whether a roll refers to a target on this
-					// sheet or not.
 					RollerResult rr = new RollerResult(
 							prefix+combat.getGameObject().getName()+type,
-							(String)r.next(),
-							(String)s.next());
+							r.next(),
+							s.next());
 					battleRolls.add(rr);
 				}
 			}
@@ -227,10 +264,9 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		CharacterWrapper character = combatFrame.getActiveCharacter();
 		if (character!=null) {
 			CombatWrapper combat = new CombatWrapper(character.getGameObject());
-			ArrayList list = combat.getSeriousWoundRolls();
+			ArrayList<String> list = combat.getSeriousWoundRolls();
 			if (list!=null) {
-				for (Iterator i=list.iterator();i.hasNext();) {
-					String result = (String)i.next();
+				for (String result : list) {
 					RollerResult rr = new RollerResult(character.getCharacterName()+" Serious Wound",result,"");
 					battleRolls.add(rr);
 				}
@@ -242,9 +278,7 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		return !getBattleRolls().isEmpty();
 	}
 	protected void updateRollerResults() {
-//System.out.println("updateRollerResults: battleChitsWithRolls.isEmpty()=="+battleChitsWithRolls.isEmpty());
 		if (combatFrame.getRollerResults()!=null) {
-//System.out.println("doing it");
 			combatFrame.getRollerResults().setBattleRolls(getBattleRolls());
 		}
 	}
@@ -254,9 +288,8 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 	public void updateMouseHover(Point p,boolean isShiftDown) {
 		Integer newIndex = null;
 		if (p!=null) {
-			for (Iterator i=layoutHash.keySet().iterator();i.hasNext();) {
+			for (Integer index : layoutHash.keySet()) {
 				int range = HOTSPOT_SIZE>>1;
-				Integer index = (Integer)i.next();
 				Point test = positions[index.intValue()];
 				if (test!=null) {
 					int dx = Math.abs(test.x-p.x);
@@ -276,27 +309,23 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		}
 	}
 	public void handleClick(Point p) {
-		for (Iterator i=hotspotHash.keySet().iterator();i.hasNext();) {
+		for (Integer index : hotspotHash.keySet()) {
 			int range = HOTSPOT_SIZE>>1;
-			Integer index = (Integer)i.next();
 			Point test = positions[index.intValue()];
 			int dx = Math.abs(test.x-p.x);
 			int dy = Math.abs(test.y-p.y);
 			if (dx<range && dy<range) {
 				int side = p.x<test.x?SwingConstants.LEFT:SwingConstants.RIGHT;
-//System.out.println(p.x<test.x?"left":"right");
 				handleClick(index.intValue(),side);
 				combatFrame.updateHotspotIndicators();
 				break;
 			}
 		}
 	}
-	public Collection getAllParticipantsOnSheet() {
-		ArrayList list = new ArrayList();
-		for (Iterator i=layoutHash.values().iterator();i.hasNext();) {
-			ArrayList in = (ArrayList)i.next();
-			for (Iterator n=in.iterator();n.hasNext();) {
-				RealmComponent rc = (RealmComponent)n.next();
+	public Collection<RealmComponent> getAllParticipantsOnSheet() {
+		ArrayList<RealmComponent> list = new ArrayList<>();
+		for (ArrayList<RealmComponent> in : layoutHash.values()) {
+			for (RealmComponent rc : in) {
 				if (rc.isMonster() || rc.isCharacter() || rc.isNative()) {
 					list.add(rc);
 				}
@@ -310,22 +339,19 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		
 		// Draw components
 		Arrays.fill(offset,0);
-		for (Iterator i=layoutHash.keySet().iterator();i.hasNext();) {
-			Integer index = (Integer)i.next();
-			ArrayList list = layoutHash.getList(index);
+		for (Integer index : layoutHash.keySet()) {
+			ArrayList<RealmComponent> list = layoutHash.getList(index);
 			Collections.sort(list);
-			for (Iterator n=list.iterator();n.hasNext();) {
-				RealmComponent rc = (RealmComponent)n.next();
+			for (RealmComponent rc : list) {
 				paintRealmComponent(g,rc,index.intValue());
 			}
 		}
 		
 		// Draw hotspots
-		ArrayList hotspotKeys = new ArrayList(hotspotHash.keySet());
+		ArrayList<Integer> hotspotKeys = new ArrayList<>(hotspotHash.keySet());
 		Collections.sort(hotspotKeys);
-		for (Iterator i=hotspotKeys.iterator();i.hasNext();) {
-			Integer index = (Integer)i.next();
-			String name = (String)hotspotHash.get(index);
+		for (Integer index : hotspotKeys) {
+			String name = hotspotHash.get(index);
 			paintHotSpot(g,name,index.intValue());
 		}
 		
@@ -341,13 +367,12 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 			int contentsX = 5;
 			int contentsY = 5;
 			
-			ArrayList c = layoutHash.getList(mouseHoverIndex);
+			ArrayList<RealmComponent> c = layoutHash.getList(mouseHoverIndex);
 			
 			if (c!=null) {
 				Rectangle[] plot = new Rectangle[c.size()];
 				int n=0;
-				for (Iterator i=c.iterator();i.hasNext();) {
-					RealmComponent rc = (RealmComponent)i.next();
+				for (RealmComponent rc : c) {
 					Dimension d = rc.getSize();
 					plot[n++] = new Rectangle(contentsX,contentsY,d.width,d.height);
 					contentsX += d.width;
@@ -358,14 +383,13 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 				if ((test.x+test.width)>maxSize.width) {
 					double scaling = ((double)(maxSize.width-test.width))/((double)(test.x));
 					for (int i=0;i<plot.length;i++) {
-						plot[i].x = (int)((double)plot[i].x*scaling);
+						plot[i].x = (int)(plot[i].x*scaling);
 					}
 				}
 				
 				// Finally, draw them
 				n=0;
-				for (Iterator i=c.iterator();i.hasNext();) {
-					RealmComponent rc = (RealmComponent)i.next();
+				for (RealmComponent rc : c) {
 					Rectangle r = plot[n++];
 					if (mouseHoverShift && rc.isChit()) {
 						// draw flipside
@@ -387,11 +411,18 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 			if (n>0) {
 				g.setColor(Color.red);
 				g.setFont(Constants.HOTSPOT_FONT);
-				g.drawString("There was no damage, fatigue, or spellcasting last round.",5,15);
+				String text = "";
+				HostPrefWrapper hostPrefs = HostPrefWrapper.findHostPrefs(tile.getGameData());
+				if (hostPrefs.hasPref(Constants.SR_ENDING_COMBAT)) {
+					text = "There was no klling, wounds, fatigue, or spellcasting last round.";
+				} else {
+					text = "There was no damage, fatigue, or spellcasting last round.";
+				}
+				g.drawString(text,5,15);
 			}
 		}
 	}
-	protected String getSubtitleForReposition(DieRoller roller) {
+	protected static String getSubtitleForReposition(DieRoller roller) {
 		if (roller!=null) {
 			switch(roller.getHighDieResult()) {
 				case 1:		return "Switch Box 2 & 3";
@@ -404,7 +435,7 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		}
 		return null;
 	}
-	protected String getSubtitleForTactics(DieRoller roller) {
+	protected static String getSubtitleForTactics(DieRoller roller) {
 		String ret = null;
 		if (roller!=null) {
 			ret = roller.getHighDieResult()==6?"Flipped!":null;
@@ -440,47 +471,78 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 			}
 		}
 	}
-	protected void placeParticipant(RealmComponent participant,int layoutIndex1) {
-		placeParticipant(participant,layoutIndex1,false,false);
+	protected void placeParticipantAttacker(RealmComponent participant) {
+		placeParticipant(participant,false,false,false,false,true);
 	}
-	protected void placeParticipant(RealmComponent participant,int layoutIndex1,boolean secrecy,boolean horseSameBox) {
+	protected void placeParticipantDefenderTarget(RealmComponent participant) {
+		placeParticipant(participant,false,false,false,true,false);
+	}
+	protected void placeParticipantDefender(RealmComponent participant) {
+		placeParticipantDefender(participant,false,false);
+	}
+	protected void placeParticipantDefender(RealmComponent participant,boolean secrecy,boolean horseSameBox) {
+		placeParticipant(participant,secrecy,horseSameBox,true,false,false);
+	}
+	protected void placeParticipant(RealmComponent participant) {
+		placeParticipant(participant,false,false,false,false,false);
+	}
+	private void placeParticipant(RealmComponent participant,boolean secrecy,boolean horseSameBox,boolean defender,boolean defenderTarget,boolean attacker) {
 		CombatWrapper combat;
-		int box;
-		
 		// Place horse (if any) first
 		RealmComponent horse = (RealmComponent)participant.getHorse();
 		if (horse!=null) {
 			combat = new CombatWrapper(horse.getGameObject());
-			box = combat.getCombatBox();
-			if (box==0) {
+			int boxD = combat.getCombatBoxDefense();
+			int boxA = combat.getCombatBoxAttack();
+			if (boxD==0) {
 				if (horseSameBox) {
-					combat.setCombatBox(1);
-					box = 1;
+					CombatFrame.placeInFirstCombatBox(combat);
+					boxD = combat.getCombatBoxDefense();
+					boxA = combat.getCombatBoxAttack();
 				}
 				else {
-					combat.setCombatBox(2);
-					box = 2;
+					CombatFrame.placeInCombatBoxAvailable(combat,2);
+					boxD = combat.getCombatBoxDefense();
+					boxA = combat.getCombatBoxAttack();
 				}
 			}
 			if (secrecy) {
-				box = 0;
+				boxA = 0;
 			}
-			layoutHash.put(new Integer(layoutIndex1+box-1),horse);
+			if (defender) {
+				layoutHash.put(getBoxIndexFromCombatBoxesForDefender(boxA,boxD),horse);
+			} else if (defenderTarget) {
+				layoutHash.put(getBoxIndexFromCombatBoxesForDefenderTarget(boxA,boxD),horse);
+			} else if (attacker) {
+				layoutHash.put(getBoxIndexFromCombatBoxesForAttacker(boxA,boxD),horse);
+			} else {
+				layoutHash.put(getBoxIndexFromCombatBoxes(boxA,boxD),horse);
+			}
 		}
 		
 		// Place participant
 		combat = new CombatWrapper(participant.getGameObject());
 		updateBattleChitsWithRolls(combat);
 		
-		box = combat.getCombatBox();
-		if (box==0) {
-			combat.setCombatBox(1);
-			box = 1;
+		int boxA = combat.getCombatBoxAttack();
+		int boxD = combat.getCombatBoxDefense();
+		if (boxA==0 || boxD==0) {
+			CombatFrame.placeInFirstCombatBox(combat);
+			boxD = combat.getCombatBoxDefense();
+			boxA = combat.getCombatBoxAttack();
 		}
 		if (secrecy) {
-			box = 0;
+			boxA = 0;
 		}
-		layoutHash.put(new Integer(layoutIndex1+box-1),participant);
+		if (defender) {
+			layoutHash.put(getBoxIndexFromCombatBoxesForDefender(boxA,boxD),participant);
+		} else if (defenderTarget) {
+			layoutHash.put(getBoxIndexFromCombatBoxesForDefenderTarget(boxA,boxD),participant);
+		} else if (attacker) {
+			layoutHash.put(getBoxIndexFromCombatBoxesForAttacker(boxA,boxD),participant);
+		} else {
+			layoutHash.put(getBoxIndexFromCombatBoxes(boxA,boxD),participant);
+		}
 		
 		// Place weapon (if any)
 		if (participant.isMonster()) {
@@ -489,15 +551,25 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 			if (weapon!=null) {
 				combat = new CombatWrapper(weapon.getGameObject());
 				updateBattleChitsWithRolls(combat);
-				box = combat.getCombatBox();
-				if (box==0) {
-					combat.setCombatBox(2);
-					box = 2;
+				boxA = combat.getCombatBoxAttack();
+				boxD = combat.getCombatBoxDefense();
+				if (boxA==0) {
+					CombatFrame.placeInCombatBoxAvailable(combat,2);
+					boxD = combat.getCombatBoxDefense();
+					boxA = combat.getCombatBoxAttack();
 				}
 				if (secrecy) {
-					box = 0;
+					boxA = 0;
 				}
-				layoutHash.put(new Integer(layoutIndex1+box-1),weapon);
+				if (defender) {
+					layoutHash.put(getBoxIndexFromCombatBoxesForDefender(boxA,boxD),weapon);
+				} else if (defenderTarget) {
+					layoutHash.put(getBoxIndexFromCombatBoxesForDefenderTarget(boxA,boxD),weapon);
+				} else if (attacker) {
+					layoutHash.put(getBoxIndexFromCombatBoxesForAttacker(boxA,boxD),weapon);
+				} else {
+					layoutHash.put(getBoxIndexFromCombatBoxes(boxA,boxD),weapon);
+				}
 			}
 		}
 	}
@@ -505,22 +577,22 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		CombatWrapper combat = new CombatWrapper(rc.getGameObject());
 		if (combat.isDead()) {
 			if (combatFrame.getActionState()<Constants.COMBAT_RESOLVING) {
-				layoutHash.put(new Integer(getDeadBoxIndex()),rc);
+				layoutHash.put(Integer.valueOf(getDeadBoxIndex()),rc);
 				return true;
 			}
 			else if (combatFrame.getActionState()==Constants.COMBAT_RESOLVING) {
-				if (combat.getCombatBox()==0) {
-					layoutHash.put(new Integer(getDeadBoxIndex()),rc);
+				if (!combat.hasCombatBox()) {
+					layoutHash.put(Integer.valueOf(getDeadBoxIndex()),rc);
 					return true;
 				}
 			}
 		}
 		return false;
 	}
-	protected void placeAllAttacks(int attackBox1,int weaponBox1,Collection excludeList) {
+	protected void placeAllAttacks(int attackBox1,int weaponBox1,Collection<RealmComponent> excludeList) {
 		boolean reveal = combatFrame.getActionState()>=Constants.COMBAT_RESOLVING;
 		
-		ArrayList all = new ArrayList(model.getAllBattleParticipants(true));
+		ArrayList<RealmComponent> all = new ArrayList<>(model.getAllBattleParticipants(true));
 		
 		// Sort by target index (lower first), to keep stack ordering correct
 		Collections.sort(all,new TargetIndexComparator());
@@ -529,28 +601,57 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		 * Cycle through all participants that are in the model, that are targeting one of the monsters or
 		 * natives in the target boxes.  (go into the attack boxes)
 		 */
-		for (Iterator i=all.iterator();i.hasNext();) {
-			RealmComponent rc = (RealmComponent)i.next();
+		for (RealmComponent rc : all) {
 			CombatWrapper rcCombat = new CombatWrapper(rc.getGameObject());
 			RealmComponent target = rc.getTarget();
+			RealmComponent target2 = rc.get2ndTarget();
 			GameObject spell = rcCombat.getCastSpell();
 			
 			// If targeting any of the sheetOwners targets, put them on the sheet in the attacker boxes
-			boolean isInactiveSheetOwner = target==null && spell==null && sheetOwner.equals(rc);
+			boolean isInactiveSheetOwner = target==null && target2==null && spell==null && sheetOwner.equals(rc);
 			boolean castingASpell = spell!=null;
-			boolean targetingSomeoneOnThisSheet = target!=null && (sheetParticipants.contains(target) || sheetOwner.equals(target));
+			boolean battleMage = false;
+			if (rc.isCharacter()) {
+				GameObject chararacterGo = rc.getGameObject();
+				CharacterWrapper activeCharacter = new CharacterWrapper(chararacterGo);
+				HostPrefWrapper hostPrefs = HostPrefWrapper.findHostPrefs(chararacterGo.getGameData());
+				if (activeCharacter.affectedByKey(Constants.BATTLE_MAGE) || hostPrefs.hasPref(Constants.SR_ADV_STEEL_AGAINST_MAGIC)) {
+					if (activeCharacter.hasOnlyStaffAsActivatedWeapon() && !activeCharacter.hasActiveArmorChits()) {
+						battleMage = true;
+					}
+				}
+			}
+					
+			boolean targetingSomeoneOnThisSheet = (target!=null && (sheetParticipants.contains(target) || sheetOwner.equals(target))) || (target2!=null && (sheetParticipants.contains(target2) || sheetOwner.equals(target2)));
 			if (!targetingSomeoneOnThisSheet && target!=null) {
 				RealmComponent targetsTarget = target.getTarget();
+				RealmComponent targetsTarget2 = target.get2ndTarget();
 				if (targetsTarget!=null && sheetParticipants.contains(targetsTarget)) {
+					// This is sloppy, but will work
+					targetingSomeoneOnThisSheet = true;
+				}
+				else if (targetsTarget2!=null && sheetParticipants.contains(targetsTarget2)) {
+					// This is sloppy, but will work
+					targetingSomeoneOnThisSheet = true;
+				}
+			}
+			if (!targetingSomeoneOnThisSheet && target2!=null) {
+				RealmComponent targetsTarget = target2.getTarget();
+				RealmComponent targetsTarget2 = target2.get2ndTarget();
+				if (targetsTarget!=null && sheetParticipants.contains(targetsTarget)) {
+					// This is sloppy, but will work
+					targetingSomeoneOnThisSheet = true;
+				}
+				else if (targetsTarget2!=null && sheetParticipants.contains(targetsTarget2)) {
 					// This is sloppy, but will work
 					targetingSomeoneOnThisSheet = true;
 				}
 			}
 			if (isInactiveSheetOwner || targetingSomeoneOnThisSheet || castingASpell) {
 				if (excludeList==null || !excludeList.contains(rc)) {
-					if (!rc.isCharacter() && sheetParticipants.contains(target)) {
+					if (!rc.isCharacter() && (sheetParticipants.contains(target) || sheetParticipants.contains(target2))) {
 						if (!addedToDead(rc)) {
-							placeParticipant(rc,attackBox1);
+							placeParticipantAttacker(rc);
 							sheetParticipants.add(rc);
 						}
 					}
@@ -558,49 +659,50 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 						updateBattleChitsWithRolls(rcCombat);
 						CharacterWrapper character = new CharacterWrapper(rc.getGameObject());
 						CharacterChitComponent characterChit = (CharacterChitComponent)rc;
-						if (spell==null) {
+						if (spell==null || battleMage) {
 							// Only show attacks if attacking a non-owned target, OR the attacker is the activeParticipant
 							if (reveal 
-									|| (target==null)
+									|| (target==null && target2==null)
 									|| (target!=null && target.getOwnerId()==null)
-									|| (target!=null && rc.equals(combatFrame.getActiveParticipant()))) {
+									|| (target2!=null && target2.getOwnerId()==null)
+									|| ((target!=null || target2!=null) && rc.equals(combatFrame.getActiveParticipant()))) {
 								
 								MonsterChitComponent transmorph = characterChit.getTransmorphedComponent();
 								if (transmorph==null) {
 									// Cycle through character fight chits and weapons for attack
-									RealmComponent weapon = character.getActiveWeapon();
-									if (weapon!=null) {
-										CombatWrapper combat = new CombatWrapper(weapon.getGameObject());
-										int box = combat.getCombatBox();
-										if (box>0) {
-											layoutHash.put(new Integer(weaponBox1+box-1),weapon);
+									ArrayList<WeaponChitComponent> weapons = character.getActiveWeapons();
+									if (weapons!=null) {
+										for (WeaponChitComponent weapon : weapons) {
+											CombatWrapper combat = new CombatWrapper(weapon.getGameObject());
+											int box = combat.getCombatBoxAttack();
+											if (box>0 && !combat.getPlacedAsParry() && !combat.getPlacedAsParryShield() && this.sheetOwner.getGameObject().getStringId().equals(combat.getSheetOwnerId())) {
+												layoutHash.put(Integer.valueOf(weaponBox1+box-1),weapon);
+											}
 										}
 									}
-									for (Iterator n=character.getActiveFightChits().iterator();n.hasNext();) {
-										RealmComponent chit = (RealmComponent)n.next();
+									for (RealmComponent chit : character.getActiveFightChits()) {
 										CombatWrapper combat = new CombatWrapper(chit.getGameObject());
-										int box = combat.getCombatBox();
-										if (box>0 && combat.getPlacedAsFight()) {
-											layoutHash.put(new Integer(attackBox1+box-1),chit);
+										int box = combat.getCombatBoxAttack();
+										if (box>0 && combat.getPlacedAsFight() && this.sheetOwner.getGameObject().getStringId().equals(combat.getSheetOwnerId())) {
+											layoutHash.put(Integer.valueOf(attackBox1+box-1),chit);
 										}
 									}
 									
 									// Look for gloves, and/or weapon inventory
-									for (Iterator n=character.getActiveInventory().iterator();n.hasNext();) {
-										GameObject go = (GameObject)n.next();
+									for (GameObject go : character.getActiveInventory()) {
 										RealmComponent item = RealmComponent.getRealmComponent(go);
 										if (item.getGameObject().hasThisAttribute("gloves")) {
 											CombatWrapper combat = new CombatWrapper(item.getGameObject());
-											int box = combat.getCombatBox();
-											if (box>0) {
-												layoutHash.put(new Integer(attackBox1+box-1),item);
+											int box = combat.getCombatBoxAttack();
+											if (box>0 && this.sheetOwner.getGameObject().getStringId().equals(combat.getSheetOwnerId())) {
+												layoutHash.put(Integer.valueOf(attackBox1+box-1),item);
 											}
 										}
 										else if (item.getGameObject().hasThisAttribute("attack")) {
 											CombatWrapper combat = new CombatWrapper(item.getGameObject());
-											int box = combat.getCombatBox();
-											if (box>0) {
-												layoutHash.put(new Integer(weaponBox1+box-1),item);
+											int box = combat.getCombatBoxAttack();
+											if (box>0 && this.sheetOwner.getGameObject().getStringId().equals(combat.getSheetOwnerId())) {
+												layoutHash.put(Integer.valueOf(weaponBox1+box-1),item);
 											}
 										}
 									}
@@ -608,9 +710,9 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 								else {
 									CombatWrapper combat = new CombatWrapper(transmorph.getGameObject());
 									updateBattleChitsWithRolls(combat);
-									int box = combat.getCombatBox();
+									int box = combat.getCombatBoxAttack();
 									if (box>0) {
-										layoutHash.put(new Integer(attackBox1+box-1),transmorph.getFightChit());
+										layoutHash.put(Integer.valueOf(attackBox1+box-1),transmorph.getFightChit());
 									}
 									
 									// Add monster weapon here
@@ -618,29 +720,28 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 									if (monsterWeapon!=null) {
 										combat = new CombatWrapper(monsterWeapon.getGameObject());
 										updateBattleChitsWithRolls(combat);
-										box = combat.getCombatBox();
+										box = combat.getCombatBoxAttack();
 										if (box>0) {
-											layoutHash.put(new Integer(attackBox1+box-1),monsterWeapon);
+											layoutHash.put(Integer.valueOf(attackBox1+box-1),monsterWeapon);
 										}
 									}
 								}
 							}
 						}
-						else {
+						if (spell!=null) {
 							// Attack spells are placed here
-							ArrayList targetTest = new ArrayList();
+							ArrayList<RealmComponent> targetTest = new ArrayList<>();
 							targetTest.addAll(sheetParticipants);
 							targetTest.add(sheetOwner);
 							SpellWrapper sw = new SpellWrapper(spell);
 							if (sw.isAttackSpell() && sw.isAlive()) {
-								ArrayList targeted = sw.getTargetedRealmComponents(targetTest);
-								boolean showAttack = targeted.size()>0;
+								ArrayList<RealmComponent> targeted = sw.getTargetedRealmComponents(targetTest);
+								boolean showAttack = targeted.size()>0 || sw.noTargeting();
 								
 								// If the attacker is NOT the active participant and...
 								if (!rc.equals(combatFrame.getActiveParticipant())) {
 									// ... any of the targeted are owned by the activeParticipant, then don't show attack (maintains secrecy)
-									for (Iterator n=targeted.iterator();n.hasNext();) {
-										RealmComponent test = (RealmComponent)n.next();
+									for (RealmComponent test : targeted) {
 										if (test.getOwnerId()!=null && test.getOwner().equals(combatFrame.getActiveParticipant())) {
 											showAttack = false;
 											break;
@@ -650,9 +751,9 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 								if (reveal || showAttack) {
 									GameObject incObj = sw.getIncantationObject();
 									CombatWrapper combat = new CombatWrapper(incObj);
-									int box = combat.getCombatBox();
+									int box = combat.getCombatBoxAttack();
 									if (box>0) {
-										layoutHash.put(new Integer(weaponBox1+box-1),RealmComponent.getRealmComponent(spell));
+										layoutHash.put(Integer.valueOf(weaponBox1+box-1),RealmComponent.getRealmComponent(spell));
 									}
 								}
 							}
@@ -662,12 +763,13 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 			}
 		}
 	}
-	private static final int HOTSPOT_SIZE = 100;
+	private static final int HOTSPOT_SIZE = 98;
 	private static final Color HOTSPOT_TITLE_COLOR = Color.blue;
 	private static final Color HOTSPOT_LINE_COLOR = Color.green;//new Color(0,0,255,120);
 	private static final Color HOTSPOT_BACKING = new Color(0,255,0,40);
 	private static final Color HOTSPOT_SPLIT_BACKING = new Color(255,255,255,190);
 	private void paintHotSpot(Graphics g,String string,int index) {
+		int HOTSPOT_SIZE = getHotSpotSize();
 		Point p = positions[index];
 		int x = p.x - (HOTSPOT_SIZE>>1);
 		int y = p.y - (HOTSPOT_SIZE>>1);
@@ -684,20 +786,22 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 				HOTSPOT_TITLE_COLOR);
 		titleBorder.paintBorder(this,g,x,y,HOTSPOT_SIZE,HOTSPOT_SIZE+5);
 		
-		String[] split = splitHotSpot(index);
-		if (split!=null) {
-			int half = HOTSPOT_SIZE>>1;
-			g.setColor(HOTSPOT_LINE_COLOR);
-			g.fillRect(x+half-2,y+16,4,HOTSPOT_SIZE-16);
-			
-			g.setColor(HOTSPOT_SPLIT_BACKING);
-			g.fillRect(x-2,y+15,12,HOTSPOT_SIZE-20);
-			g.fillRect(x+90,y+15,12,HOTSPOT_SIZE-20);
-			
-			g.setColor(Color.black);
-			g.setFont(Constants.RESULT_FONT);
-			TextType.drawText(g,split[0],x,y+5,HOTSPOT_SIZE,90,Alignment.Center);
-			TextType.drawText(g,split[1],x+93,y+5,HOTSPOT_SIZE,90,Alignment.Center);
+		if (hostPrefs.hasPref(Constants.HOUSE3_HORSE_WEAPON_SAME_BOX)) {
+			String[] split = splitHotSpot(index);
+			if (split!=null) {
+				int half = HOTSPOT_SIZE>>1;
+				g.setColor(HOTSPOT_LINE_COLOR);
+				g.fillRect(x+half-2,y+16,4,HOTSPOT_SIZE-16);
+				
+				g.setColor(HOTSPOT_SPLIT_BACKING);
+				g.fillRect(x-2,y+15,12,HOTSPOT_SIZE-20);
+				g.fillRect(x+90,y+15,12,HOTSPOT_SIZE-20);
+				
+				g.setColor(Color.black);
+				g.setFont(Constants.RESULT_FONT);
+				TextType.drawText(g,split[0],x,y+5,HOTSPOT_SIZE,90,Alignment.Center);
+				TextType.drawText(g,split[1],x+93,y+5,HOTSPOT_SIZE,90,Alignment.Center);
+			}
 		}
 	}
 	private void paintRealmComponent(Graphics g,RealmComponent rc,int index) {
@@ -730,7 +834,7 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		circleGroup = buildRollerGroup(CombatWrapper.GROUP_CIRCLE,combat);
 		squareGroup = buildRollerGroup(CombatWrapper.GROUP_SQUARE,combat);
 	}
-	protected RollerGroup buildRollerGroup(String prefix,CombatWrapper combat) {
+	protected static RollerGroup buildRollerGroup(String prefix,CombatWrapper combat) {
 		RollerGroup rg = null;
 		int reposition = combat.getRepositionResult(prefix);
 		if (reposition>0) {
@@ -756,30 +860,22 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		return rg;
 	}
 	protected void drawRollerGroup(Graphics g,RollerGroup rg,int repRoll,int ctRoll) {
-		paintRoller(g,"Repositioning Roll",getSubtitleForReposition(rg.repositionRoller),rg.repositionRoller,repRoll,0,0);
-		paintRoller(g,"Change Tactics",getSubtitleForTactics(rg.changeTacticsRoller1),rg.changeTacticsRoller1,ctRoll,0,-50);
-		paintRoller(g,"Change Tactics",getSubtitleForTactics(rg.changeTacticsRoller2),rg.changeTacticsRoller2,ctRoll+1,0,-50);
-		paintRoller(g,"Change Tactics",getSubtitleForTactics(rg.changeTacticsRoller3),rg.changeTacticsRoller3,ctRoll+2,0,-50);
+		paintRoller(g," ",getSubtitleForReposition(rg.repositionRoller),rg.repositionRoller,repRoll,0,0);
+		paintRoller(g,"Tactics",getSubtitleForTactics(rg.changeTacticsRoller1),rg.changeTacticsRoller1,ctRoll,0,-50);
+		paintRoller(g,"Tactics",getSubtitleForTactics(rg.changeTacticsRoller2),rg.changeTacticsRoller2,ctRoll+1,0,-50);
+		paintRoller(g,"Tactics",getSubtitleForTactics(rg.changeTacticsRoller3),rg.changeTacticsRoller3,ctRoll+2,0,-50);
 	}
 	
 	/**
 	 * @return		true if attacked by another character (hirelings are ignored for this check, however)
 	 */
 	protected boolean isAttackedByCharacter() {
-		for (Iterator i=model.getAttackersFor(sheetOwner).iterator();i.hasNext();) {
-			RealmComponent attacker = (RealmComponent)i.next();
+		for (RealmComponent attacker : model.getAttackersFor(sheetOwner)) {
 			if (attacker.isCharacter()) {
 				return true;
 			}
 		}
 		return false;
-	}
-	
-	protected void showBattlingNatives() { // FIXME Write this code
-//		if (sheetOwner.equals(combatFrame.getActiveParticipant())) {
-//			CharacterWrapper character = combatFrame.getActiveCharacter();
-//			character.addBattlingNative()
-//		}
 	}
 	
 	protected static class RollerGroup {
@@ -789,10 +885,9 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		public DieRoller changeTacticsRoller3;
 	}
 	
-	public boolean containsHorse(ArrayList list) {
+	public static boolean containsHorse(ArrayList<RealmComponent> list) {
 		if (list!=null) {
-			for (Iterator i=list.iterator();i.hasNext();) {
-				RealmComponent rc = (RealmComponent)i.next();
+			for (RealmComponent rc : list) {
 				if (rc.hasHorse()) {
 					return true;
 				}
@@ -801,10 +896,9 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		return false;
 	}
 	
-	public boolean containsEnemy(RealmComponent attacker,ArrayList list) {
+	public boolean containsEnemy(RealmComponent attacker,ArrayList<RealmComponent> list) {
 		if (list!=null) {
-			for (Iterator i=list.iterator();i.hasNext();) {
-				RealmComponent rc = (RealmComponent)i.next();
+			for (RealmComponent rc : list) {
 				if (combatFrame.allowsTreachery() || !attacker.equals(rc.getOwner())) {
 					return true;
 				}
@@ -812,10 +906,9 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		}
 		return false;
 	}
-	public boolean containsFriend(RealmComponent attacker,ArrayList list) {
+	public static boolean containsFriend(RealmComponent attacker,ArrayList<RealmComponent> list) {
 		if (list!=null) {
-			for (Iterator i=list.iterator();i.hasNext();) {
-				RealmComponent rc = (RealmComponent)i.next();
+			for (RealmComponent rc : list) {
 				if (attacker.equals(rc.getOwner())) {
 					return true;
 				}
@@ -826,10 +919,9 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 	/**
 	 * Returns true, if the list contains at least one friend, or one unhired denizen.
 	 */
-	public static boolean containsFriendOrDenizen(RealmComponent attacker,ArrayList list) {
+	public static boolean containsFriendOrDenizen(RealmComponent attacker,ArrayList<RealmComponent> list) {
 		if (list!=null) {
-			for (Iterator i=list.iterator();i.hasNext();) {
-				RealmComponent rc = (RealmComponent)i.next();
+			for (RealmComponent rc : list) {
 				if (rc.isNative() || rc.isMonster() || rc.isCharacter() || rc.isActionChit()) {
 					RealmComponent owner = rc.getOwner();
 					if (owner==null || attacker.equals(rc.getOwner())) {
@@ -840,11 +932,10 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		}
 		return false;
 	}
-	public static ArrayList filterEnemies(RealmComponent attacker,ArrayList list) {
+	public static ArrayList<RealmComponent> filterEnemies(RealmComponent attacker,ArrayList<RealmComponent> list) {
 		if (list!=null) {
-			ArrayList ret = new ArrayList();
-			for (Iterator i=list.iterator();i.hasNext();) {
-				RealmComponent rc = (RealmComponent)i.next();
+			ArrayList<RealmComponent> ret = new ArrayList<>();
+			for (RealmComponent rc : list) {
 				if (!attacker.equals(rc.getOwner())) {
 					ret.add(rc);
 				}
@@ -853,11 +944,10 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		}
 		return null;
 	}
-	public static ArrayList filterFriends(RealmComponent attacker,ArrayList list) {
+	public static ArrayList<RealmComponent> filterFriends(RealmComponent attacker,ArrayList<RealmComponent> list) {
 		if (list!=null) {
-			ArrayList ret = new ArrayList();
-			for (Iterator i=list.iterator();i.hasNext();) {
-				RealmComponent rc = (RealmComponent)i.next();
+			ArrayList<RealmComponent> ret = new ArrayList<>();
+			for (RealmComponent rc : list) {
 				if (attacker.equals(rc.getOwner())) {
 					ret.add(rc);
 				}
@@ -866,11 +956,10 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		}
 		return null;
 	}
-	public static ArrayList filterFriendsAndDenizens(RealmComponent attacker,ArrayList list) {
+	public static ArrayList<RealmComponent> filterFriendsAndDenizens(RealmComponent attacker,ArrayList<RealmComponent> list) {
 		if (list!=null) {
-			ArrayList ret = new ArrayList();
-			for (Iterator i=list.iterator();i.hasNext();) {
-				RealmComponent rc = (RealmComponent)i.next();
+			ArrayList<RealmComponent> ret = new ArrayList<>();
+			for (RealmComponent rc : list) {
 				RealmComponent owner = rc.getOwner();
 				if (owner==null || attacker.equals(rc.getOwner())) {
 					ret.add(rc);
@@ -880,13 +969,54 @@ public abstract class CombatSheet extends JLabel implements Scrollable {
 		}
 		return null;
 	}
-	public static CombatSheet createCombatSheet(CombatFrame frame,BattleModel currentBattleModel,RealmComponent rc,boolean interactiveFrame) {
+	public static ArrayList<RealmComponent> filterNativeFriendly(RealmComponent attacker,Collection<RealmComponent> list) {
+		if (attacker == null) return (ArrayList<RealmComponent>) list;
+		if (list!=null) {
+			ArrayList<RealmComponent> ret = new ArrayList<>();
+			HostPrefWrapper hostPrefs = HostPrefWrapper.findHostPrefs(attacker.getGameObject().getGameData());
+			for (RealmComponent rc : list) {
+				if (!attackerIsFriendlyToDenizen(attacker,rc,hostPrefs)) {
+					ret.add(rc);
+				}
+			}
+			return ret;
+		}
+		return null;
+	}
+	public static boolean attackerIsFriendlyToDenizen(RealmComponent attacker, RealmComponent rc, HostPrefWrapper hostPrefs) {
+		if (rc.isNative() && !rc.isHiredOrControlled()) {
+			RealmComponent owner = attacker;
+			while (owner.isHiredOrControlled()) {
+				owner = owner.getOwner();
+			}
+			CharacterWrapper ownerCharacter = new CharacterWrapper(owner.getGameObject());
+			boolean ownerIsNativeFriendly = ownerCharacter.affectedByKey(Constants.NATIVE_FRIENDLY);
+			boolean ownerIsBattlingNativeGroup = false;
+			Collection<String> battlingNativeGroups = ownerCharacter.getBattlingNativeGroups();
+			String nativeGroup = rc.getGameObject().getThisAttribute("native");
+			for (String group : battlingNativeGroups) {
+				if (group.toLowerCase().matches(nativeGroup.toLowerCase())) {
+					ownerIsBattlingNativeGroup = true;
+					break;
+				}
+			}
+			if (!ownerIsBattlingNativeGroup && (ownerIsNativeFriendly || hostPrefs.hasPref(Constants.OPT_NATIVES_FRIENDLY))) {
+				int relationship = ownerCharacter.getRelationship(rc.getGameObject());
+				boolean groupIsFriendlyAllied = relationship == RelationshipType.FRIENDLY || relationship == RelationshipType.ALLY;
+				if (groupIsFriendlyAllied) {
+					return true;
+				}
+				return false;
+			}
+			return false;
+		}
+		return false;
+	}
+	public static CombatSheet createCombatSheet(CombatFrame frame,BattleModel currentBattleModel,RealmComponent rc,boolean interactiveFrame, HostPrefWrapper hostPrefs) {
 		if (rc.isCharacter()) {
-			return new CharacterCombatSheet(frame,currentBattleModel,rc,interactiveFrame);
+			return new CharacterCombatSheet(frame,currentBattleModel,rc,interactiveFrame,hostPrefs);
 		}
-		else {
-			return new DenizenCombatSheet(frame,currentBattleModel,rc,interactiveFrame);
-		}
+		return new DenizenCombatSheet(frame,currentBattleModel,rc,interactiveFrame,hostPrefs);
 	}
 	private KeyListener shiftKeyListener = new KeyListener() {
 		public void keyTyped(KeyEvent e) {
