@@ -1,20 +1,3 @@
-/* 
- * RealmSpeak is the Java application for playing the board game Magic Realm.
- * Copyright (c) 2005-2015 Robin Warren
- * E-mail: robin@dewkid.com
- * 
- * This program is free software: you can redistribute it and/or modify it under the terms of the
- * GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
- * or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- * implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
- * for more details.
- * 
- * You should have received a copy of the GNU General Public License along with this program. If not, see
- *
- * http://www.gnu.org/licenses/
- */
 package com.robin.magic_realm.RealmBattle;
 
 import java.util.*;
@@ -23,6 +6,7 @@ import java.util.logging.Logger;
 import com.robin.game.objects.GameData;
 import com.robin.game.objects.GameObject;
 import com.robin.game.objects.GamePool;
+import com.robin.game.server.GameClient;
 import com.robin.game.server.GameHost;
 import com.robin.general.util.HashLists;
 import com.robin.general.util.RandomNumber;
@@ -45,10 +29,8 @@ public class RealmBattle {
 		logger.fine("-------");
 		RealmComponent.resetTargetIndex(data);
 		GamePool pool = new GamePool(RealmObjectMaster.getRealmObjectMaster(data).getPlayerCharacterObjects());
-		Collection characterGameObjects = pool.find(CharacterWrapper.getKeyVals());
-		for (Iterator i=characterGameObjects.iterator();i.hasNext();) {
-			GameObject go = (GameObject)i.next();
-			
+		Collection<GameObject> characterGameObjects = pool.find(CharacterWrapper.getKeyVals());
+		for (GameObject go : characterGameObjects) {
 			// Clear combat info
 			CharacterWrapper character = new CharacterWrapper(go);
 			logger.finer(character.getCharacterName());
@@ -94,34 +76,33 @@ public class RealmBattle {
 		
 		BattlesWrapper battles = getBattles(data);
 		
-		ArrayList battleLocations = new ArrayList();
+		ArrayList<TileLocation> battleLocations = new ArrayList<>();
 		
 		// Find all combat clearings by locating all active characters and leaders
 		GamePool pool = new GamePool(RealmObjectMaster.getRealmObjectMaster(data).getPlayerCharacterObjects());
-		Collection characterGameObjects = pool.extract(CharacterWrapper.getKeyVals());
-		for (Iterator i=characterGameObjects.iterator();i.hasNext();) {
-			CharacterWrapper character = new CharacterWrapper((GameObject)i.next());
+		Collection<GameObject> characterGameObjects = pool.extract(CharacterWrapper.getKeyVals());
+		for (GameObject cgo : characterGameObjects) {
+			CharacterWrapper character = new CharacterWrapper(cgo);
 			if (character.isActive()) {
 				TileLocation tl = character.getCurrentLocation();
 				if (tl!=null && tl.hasClearing()) {
 					BattleModel battleModel = buildBattleModel(tl,data);
 					boolean combatIsOn = false;
-					if (battleModel.getGroupCount(true)>1 || character.getWantsCombat()) { // has to be more than one group to have a fight! FIXME (ignores treachery for now)
+					if (battleModel.getGroupCount(true)>1 || character.getWantsCombat()) {
 						combatIsOn = true;
 						if (battleModel.getDenizenBattleGroup()==null && !character.getWantsCombat()) {
 							// make sure there is at least one character battling another (might all be friendly)
 							boolean battlingChars = false;
-							ArrayList leaders = battleModel.getAllLeaders();
-							for (Iterator n=leaders.iterator();n.hasNext();) {
-								RealmComponent rc1 = (RealmComponent)n.next();
+							ArrayList<RealmComponent> leaders = battleModel.getAllLeaders();
+							leaders.addAll(battleModel.getAllOwningCharacters());
+							for (RealmComponent rc1 : leaders) {
 								CharacterWrapper char1 = new CharacterWrapper(rc1.getGameObject());
 								if (char1.getWantsCombat()) {
 									// If somebody wants combat, then get out of here anyway
 									battlingChars = true;
 								}
 								else {
-									for (Iterator t=leaders.iterator();t.hasNext();) {
-										RealmComponent rc2 = (RealmComponent)t.next();
+									for (RealmComponent rc2 : leaders) {
 										if (char1.isEnemy(rc2.getGameObject())) {
 											battlingChars = true;
 											break;
@@ -151,12 +132,12 @@ public class RealmBattle {
 				}
 			}
 		}
-		// Assign random clearing order (TODO Need to check the rules here)
+		// Assign random clearing order
 		battles.clearBattles();
 		if (battleLocations.size()>0) {
 			while(battleLocations.size()>0) {
 				int r = RandomNumber.getRandom(battleLocations.size());
-				TileLocation location = (TileLocation)battleLocations.remove(r);
+				TileLocation location = battleLocations.remove(r);
 				battles.addBattleLocation(location,data);
 			}
 			battles.initNextBattleLocation(data); // this starts it off
@@ -169,17 +150,16 @@ public class RealmBattle {
 		BattlesWrapper battles = getBattles(data);
 		return battles.getCurrentBattleLocation(data);
 	}
-	public static HashLists findCharacterStates(TileLocation currentCombatLocation,GameData data) {
+	public static HashLists<Integer,CharacterWrapper> findCharacterStates(TileLocation currentCombatLocation,GameData data) {
 		// Get all characters involved in battle
 		BattleModel model = buildBattleModel(currentCombatLocation,data);
-		Collection c = model.getAllOwningCharacters();
-		HashLists lists = new HashLists();
-		for (Iterator n=c.iterator();n.hasNext();) {
-			RealmComponent rc = (RealmComponent)n.next();
+		Collection<RealmComponent> c = model.getAllOwningCharacters();
+		HashLists<Integer,CharacterWrapper> lists = new HashLists<>();
+		for (RealmComponent rc : c) {
 			CharacterWrapper aChar = new CharacterWrapper(rc.getGameObject());
 			int astate = aChar.getCombatStatus();
 			if (astate>0) {
-				lists.put(new Integer(astate),aChar);
+				lists.put(Integer.valueOf(astate),aChar);
 			}
 		}
 		return lists;
@@ -191,11 +171,11 @@ public class RealmBattle {
 		BattlesWrapper battles = getBattles(data);
 		battles.initNextBattleLocation(data);
 	}
-	public static HashLists currentCombatHashLists(GameData data) {
+	public static HashLists<Integer,CharacterWrapper> currentCombatHashLists(GameData data) {
 		logger.fine("-------");
 		TileLocation currentCombatLocation = getCurrentCombatLocation(data);
 		if (currentCombatLocation!=null && currentCombatLocation.hasClearing()) {
-			HashLists lists = findCharacterStates(currentCombatLocation,data);
+			HashLists<Integer,CharacterWrapper> lists = findCharacterStates(currentCombatLocation,data);
 			return lists;
 		}
 		return null;
@@ -213,9 +193,25 @@ public class RealmBattle {
 		TileLocation currentCombatLocation = getCurrentCombatLocation(data);
 		if (currentCombatLocation!=null && currentCombatLocation.hasClearing()) {
 			
-			HashLists lists = findCharacterStates(currentCombatLocation,data);
+			CombatWrapper tileCombatInfos = new CombatWrapper (currentCombatLocation.tile.getGameObject());
+			if (tileCombatInfos.isSleepClearing(currentCombatLocation.clearing.getNum())) {
+				expireWishStrength(currentCombatLocation,data);
+				disengage(currentCombatLocation,data);
+				HostPrefWrapper hostPrefs = HostPrefWrapper.findHostPrefs(data);
+				if (hostPrefs.hasPref(Constants.OPT_ENHANCED_MAGIC)) {
+					// For Enhanced Magic, incantations are broken every round to free up magic chits again!
+					SpellMasterWrapper.getSpellMaster(data).breakAllIncantations(false);
+				}
+				SpellMasterWrapper.getSpellMaster(data).expirePhaseSpells();
+				endCombatInClearing(currentCombatLocation,data);
+				updateClearingOrder(data);
+				return nextCombatAction(host,data); // recurses!
+			}
 			
-			ArrayList states = new ArrayList(lists.keySet());
+			checkForHurricaneWinds(currentCombatLocation,data);
+			
+			HashLists<Integer,CharacterWrapper> lists = findCharacterStates(currentCombatLocation,data);
+			ArrayList<Integer> states = new ArrayList<>(lists.keySet());
 			
 			if (states.isEmpty()) { // this can happen when a character runs!  (I think...)
 				updateClearingOrder(data);
@@ -225,17 +221,17 @@ public class RealmBattle {
 			Collections.sort(states);
 			
 			// Determine the "first" state
-			Integer firstState = (Integer)states.iterator().next();
+			Integer firstState = states.iterator().next();
 			
 			// Get all those characters in the first state
-			ArrayList choices = lists.getList(firstState);
+			ArrayList<CharacterWrapper> choices = lists.getList(firstState);
 				
 			logger.finer("firstState="+firstState+" for "+choices);
 			
 			if (firstState.intValue()<Constants.COMBAT_WAIT // This first test seems to be useless....
 					&& firstState.intValue()==Constants.COMBAT_RESOLVING) {
 				// Might be stuck in a loop if all characters are hidden!
-				CharacterWrapper active = (CharacterWrapper)choices.iterator().next();
+				CharacterWrapper active = choices.iterator().next();
 				if (!requiresCombatInteraction(currentCombatLocation,active)) {
 					active.setCombatStatus(getNextWaitState(firstState.intValue()));
 					logger.finer(active.getCharacterName()+" No interaction needed, moving to next state...");
@@ -254,16 +250,14 @@ public class RealmBattle {
 					// Only one state, means everyone is the same.
 					// There is a special case where every character chooses to skip combat.  Check for this.
 					boolean skipCombat = true;
-					for (Iterator i=choices.iterator();i.hasNext();) {
-						CharacterWrapper character = (CharacterWrapper)i.next();
+					for (CharacterWrapper character : choices) {
 						CombatWrapper combat = new CombatWrapper(character.getGameObject());
 						if (!combat.getSkipCombat()) {
 							skipCombat = false;
 							break;
 						}
 					}
-					for (Iterator i=choices.iterator();i.hasNext();) {
-						CharacterWrapper character = (CharacterWrapper)i.next();
+					for (CharacterWrapper character : choices) {
 						CombatWrapper combat = new CombatWrapper(character.getGameObject());
 						combat.setSkipCombat(false); // reset it now
 					}
@@ -277,6 +271,8 @@ public class RealmBattle {
 					// Check special inits before moving onto actionState
 					switch(actionState) {
 						case Constants.COMBAT_PREBATTLE:
+							energizeDenizenPreBattleSpells(currentCombatLocation,data);
+							guildHideout(currentCombatLocation,data);
 							break;
 						case Constants.COMBAT_LURE:
 							// need to do preparation before moving onto LURE
@@ -303,14 +299,17 @@ public class RealmBattle {
 							// need to energize spells here
 							energizeSpells(currentCombatLocation,data);
 							fixSheetOwners(currentCombatLocation,data);
+							autoPositionAttackers(currentCombatLocation,data);
 							break;
 						case Constants.COMBAT_TACTICS:
+							endAttacksIfPeaceful(currentCombatLocation,data);
 							LogStage("Reposition/Tactics");
 							repositionTactics(currentCombatLocation,data);
 							break;
 						case Constants.COMBAT_RESOLVING:
 							// need to resolve attacks before informing players of the resolution
 							LogStage("Resolve Combat");
+							raiseDeads(currentCombatLocation,data);
 							resolveCombat(currentCombatLocation,data);
 							break;
 						case Constants.COMBAT_FATIGUE:
@@ -319,8 +318,7 @@ public class RealmBattle {
 						case Constants.COMBAT_DISENGAGE:
 							if (disengage(currentCombatLocation,data)) {
 								// reset back to LURE
-								for (Iterator n=choices.iterator();n.hasNext();) {
-									CharacterWrapper one = (CharacterWrapper)n.next();
+								for (CharacterWrapper one : choices) {
 									one.setCombatStatus(Constants.COMBAT_LURE+Constants.COMBAT_WAIT);
 								}
 							}
@@ -337,8 +335,8 @@ public class RealmBattle {
 				CharacterWrapper active = null;
 				if (actionState==Constants.COMBAT_RESOLVING) {
 					// RESOLVING happens simultaneously
-					for (Iterator n=choices.iterator();n.hasNext();) {
-						active = (CharacterWrapper)n.next();
+					for (Iterator<CharacterWrapper> n=choices.iterator();n.hasNext();) {
+						active = n.next();
 						active.setCombatStatus(actionState);
 					}
 					logger.finer("all.setCombatStatus "+actionState);
@@ -349,22 +347,18 @@ public class RealmBattle {
 					// TODO But DONT preserve the daylight order for TARGET selection...
 					
 					if (actionState==Constants.COMBAT_ASSIGN) {
-						Collections.sort(choices,new Comparator() {
-							public int compare(Object o1,Object o2) {
+						Collections.sort(choices,new Comparator<CharacterWrapper>() {
+							public int compare(CharacterWrapper c1,CharacterWrapper c2) {
 								int ret = 0;
-								CharacterWrapper c1 = (CharacterWrapper)o1;
-								CharacterWrapper c2 = (CharacterWrapper)o2;
 								ret = c1.getMeleePlayOrder()-c2.getMeleePlayOrder();
 								return ret;
 							}
 						});
 					}
 					else {
-						Collections.sort(choices,new Comparator() {
-							public int compare(Object o1,Object o2) {
+						Collections.sort(choices,new Comparator<CharacterWrapper>() {
+							public int compare(CharacterWrapper c1,CharacterWrapper c2) {
 								int ret = 0;
-								CharacterWrapper c1 = (CharacterWrapper)o1;
-								CharacterWrapper c2 = (CharacterWrapper)o2;
 								ret = c1.getCombatPlayOrder()-c2.getCombatPlayOrder();
 								return ret;
 							}
@@ -372,7 +366,7 @@ public class RealmBattle {
 					}
 					
 					// Take the first one (because of the sort, should be the next in line)
-					active = (CharacterWrapper)choices.iterator().next();
+					active = choices.iterator().next();
 					active.setCombatStatus(actionState);
 					logger.finer(active.getCharacterName()+" setCombatStatus "+actionState);
 				}
@@ -406,13 +400,12 @@ public class RealmBattle {
 			return false;
 		}
 		CombatWrapper tile = new CombatWrapper(current.tile.getGameObject());
-		boolean peace = tile.isPeaceClearing(current.clearing.getNum());
+		boolean peace = tile.isPeaceClearing(current.clearing.getNum()) || tile.isSleepClearing(current.clearing.getNum());
 		BattleModel model = buildBattleModel(current,character.getGameObject().getGameData());
 		boolean canSkipCombat = model.canSkipCombat(character.getCombatStatus());
 		BattleGroup denizens = model.getDenizenBattleGroup();
-		ArrayList sheetOwners = new ArrayList();
-		for (Iterator i=model.getAllBattleParticipants(true).iterator();i.hasNext();) {
-			RealmComponent rc = (RealmComponent)i.next();
+		ArrayList<RealmComponent> sheetOwners = new ArrayList<>();
+		for (RealmComponent rc : model.getAllBattleParticipants(true)) {
 			CombatWrapper rcCombat = new CombatWrapper(rc.getGameObject());
 			if (rcCombat.isSheetOwner()) {
 				sheetOwners.add(rc);
@@ -420,7 +413,6 @@ public class RealmBattle {
 		}
 		RealmComponent charRc = RealmComponent.getRealmComponent(character.getGameObject());
 		boolean activeCharacterIsHere = model.getBattleGroup(charRc).getCharacterInBattle()!=null;
-		boolean activeUnmistyCharacterIsHere = activeCharacterIsHere && !character.isMistLike();
 		logger.finer(character.getGameObject().getName()+" is here = "+activeCharacterIsHere);
 		switch(character.getCombatStatus()) {
 			case Constants.COMBAT_PREBATTLE:
@@ -435,8 +427,7 @@ public class RealmBattle {
 				}
 				// Check to see if any of the character's hirelings can lure
 				boolean hirelingsCanLure = false;
-				for (Iterator i=model.getBattleGroup(charRc).getBattleParticipants().iterator();i.hasNext();) {
-					RealmComponent test = (RealmComponent)i.next();
+				for (RealmComponent test : model.getBattleGroup(charRc).getBattleParticipants()) {
 					if (!test.isCharacter()) {
 						if (model.getAttackersFor(test).size()==0) { // found one!
 							hirelingsCanLure = true;
@@ -445,16 +436,18 @@ public class RealmBattle {
 					}
 				}
 				
-				if ((!activeCharacterIsHere || character.isMistLike()) && !hirelingsCanLure) {
+				if (!activeCharacterIsHere && !hirelingsCanLure) {
 					return false;
 				}
 			
 				// Check for unassigned denizens
 				RealmComponent characterTarget = null;
 				if (denizens!=null && denizens.size()>0) {
-					for (Iterator i=denizens.getBattleParticipants().iterator();i.hasNext();) {
-						RealmComponent rc = (RealmComponent)i.next();
+					for (RealmComponent rc : denizens.getBattleParticipants()) {
+						if (character.isMistLike() && !rc.getGameObject().hasThisAttribute(Constants.IGNORE_MIST_LIKE)
+								&& (!rc.isCharacter() || !(new CharacterWrapper(rc.getGameObject())).affectedByKey(Constants.IGNORE_MIST_LIKE))) continue;
 						RealmComponent target = rc.getTarget();
+						RealmComponent target2 = rc.get2ndTarget();
 						if (target==null) { // only need one unassigned denizen
 							return true;
 						}
@@ -468,11 +461,24 @@ public class RealmBattle {
 								characterTarget = target;
 							}
 						}
+						else if (target2!=null && target2.isCharacter()) {
+							if (!rc.isMonster() || !((MonsterChitComponent)rc).isPinningOpponent()) {
+								// Don't include red-side-up monsters
+								if (!target2.getGameObject().equals(character.getGameObject())) {
+									// At least one denizen is targeting a character that is not THIS character
+									return true;
+								}
+								characterTarget = target2;
+							}
+						}
 					}
 				}
 				if (characterTarget!=null) { // there is at least one denizen on a character sheet
 					// If one of the current character's hirelings can lure, then return true here
 					return hirelingsCanLure;
+				}
+				if (character.isMistLike()) {
+					return false;
 				}
 				break;
 			case Constants.COMBAT_RANDOM_ASSIGN:
@@ -485,18 +491,22 @@ public class RealmBattle {
 				 * hired natives, or if combat can be skipped
 				 */
 				int count = 0;
-				for (Iterator i=model.getAllParticipatingCharacters().iterator();i.hasNext();) {
-					CharacterChitComponent chit = (CharacterChitComponent)i.next();
+				int countAll = 0;
+				boolean ignoreMistLike = false;
+				for (CharacterChitComponent chit : model.getAllParticipatingCharacters()) {
+					if (chit.getGameObject().hasThisAttribute(Constants.IGNORE_MIST_LIKE)) {
+						ignoreMistLike = true;
+					}
+					countAll++;
 					if (!chit.isMistLike()) {
 						count++;
 					}
 				}
-				boolean multipleCharacters = count>1;
+				boolean multipleCharacters = count>1 || (countAll>1 && ignoreMistLike);
 				BattleGroup battleGroup = model.getParticipantsBattleGroup(RealmComponent.getRealmComponent(character.getGameObject()));
-				Collection hirelings = battleGroup.getHirelings();
+				Collection<RealmComponent> hirelings = battleGroup.getHirelings();
 				boolean unassignedHirelings = false;
-				for (Iterator i=hirelings.iterator();i.hasNext();) {
-					RealmComponent hireling = (RealmComponent)i.next();
+				for (RealmComponent hireling : hirelings) {
 					if (model.getAttackersFor(hireling).size()==0) {
 						unassignedHirelings = true;
 						break;
@@ -509,23 +519,22 @@ public class RealmBattle {
 			case Constants.COMBAT_ASSIGN: // assigning targets
 				if (!peace && !combat.isPeaceful()) {
 					// First check to see if there are any unassigned denizens or an active combat spell
-					if (activeUnmistyCharacterIsHere && (model.areUnassignedDenizens() || combat.getCastSpell()!=null)) {
+					if (activeCharacterIsHere && (!character.isMistLike() || model.unassignedDenizenCanAttackMistLike()) && (model.areUnassignedDenizens() || combat.getCastSpell()!=null)) {
 						return true;
 					}
 					
 					// Test to see if the character is present and has potential targets to assign
 					BattleGroup group = model.getBattleGroup(charRc);
-					if (activeUnmistyCharacterIsHere) {
-						Collection c = model.getAllOtherBattleParticipants(group,true,character.getTreacheryPreference());
+					if (activeCharacterIsHere && !character.isMistLike()) {
+						Collection<RealmComponent> c = model.getAllOtherBattleParticipants(group,true,character.getTreacheryPreference());
 						if (c.size()>0) {
 							return true;
 						}
 					}
 					else {
 						// Test to see if any hireling has any potential targets (more than one attacker)
-						for (Iterator i=group.getBattleParticipants().iterator();i.hasNext();) {
-							RealmComponent rc = (RealmComponent)i.next();
-							Collection c = model.getAttackersFor(rc);
+						for (RealmComponent rc : group.getBattleParticipants()) {
+							Collection<RealmComponent> c = model.getAttackersFor(rc);
 							if (c.size()>1) {
 								return true;
 							}
@@ -536,12 +545,14 @@ public class RealmBattle {
 			case Constants.COMBAT_POSITIONING: // playing attacks and manuevers
 				return true; // Show positioning every round - this allows hidden characters to extend combat by fatiguing on purpose...
 			case Constants.COMBAT_TACTICS: // flips denizens, repositions, allows characters that *can* to replace MOVE or FIGHT
-				Collection attackers = model.getAttackersFor(RealmComponent.getRealmComponent(character.getGameObject()));
+				Collection<RealmComponent> attackers = model.getAttackersFor(RealmComponent.getRealmComponent(character.getGameObject()));
 				RealmComponent attacker = RealmComponent.getRealmComponent(character.getGameObject());
 				RealmComponent target = attacker.getTarget();
+				RealmComponent target2 = attacker.get2ndTarget();
 				return (activeCharacterIsHere 
-						&& ( (target!=null && character.canReplaceFight(target))
-								|| character.canReplaceMove(attackers)));
+						&& ( character.canReplaceMove(attackers))
+								|| (target!=null && (character.canReplaceFight(target) || character.canReplaceParry(target)))
+								|| (target2!=null && (character.canReplaceFight(target2) || character.canReplaceParry(target2))));
 			case Constants.COMBAT_RESOLVING: // determines hits, show results
 				return true; // Show resolution every round - this guarantees that everything is cleaned up properly.
 			case Constants.COMBAT_FATIGUE:
@@ -551,7 +562,8 @@ public class RealmBattle {
 					int newWounds = combat.getNewWounds();
 					Effort effortUsed = BattleUtility.getEffortUsed(character);
 					int free = character.getEffortFreeAsterisks();
-					return (healing>0 || newWounds>0 || effortUsed.getNeedToFatigue(free)>0);
+					int weatherFatigue = character.getWeatherFatigue();
+					return (healing>0 || newWounds>0 || effortUsed.getNeedToFatigue(free)>0 || weatherFatigue>0);
 				}
 				return false;
 			case Constants.COMBAT_DONE:
@@ -569,12 +581,11 @@ public class RealmBattle {
 	 * @param data			The GameData
 	 */
 	public static BattleModel buildBattleModel(TileLocation tl,GameData data) {
-		HashLists lists = new HashLists();
-		Collection c = ClearingUtility.getCombatantsInClearing(tl);
+		HashLists<String,RealmComponent> lists = new HashLists<>();
+		Collection<RealmComponent> c = ClearingUtility.getCombatantsInClearing(tl,data);
 		
 		// Hash all combatants by ownerid - uncontrolled denizens will be owned by UNCONTROLLED
-		for (Iterator i=c.iterator();i.hasNext();) {
-			RealmComponent rc = (RealmComponent)i.next();
+		for (RealmComponent rc : c) {
 			String ownerid = rc.getOwnerId(); // Note:  characters own themselves
 			if (ownerid==null) {
 				// uncontrolled denizen
@@ -587,22 +598,26 @@ public class RealmBattle {
 		BattleModel model = new BattleModel(data,tl);
 		
 		// Iterate through the owner lists, and create separate BattleGroup objects for each
-		for (Iterator i=lists.keySet().iterator();i.hasNext();) {
-			String ownerid = (String)i.next();
-			
+		for (String ownerid : lists.keySet()) {	
 			// Create a BattleGroup for the owner
 			RealmComponent owner = RealmComponent.getRealmComponentFromId(data,ownerid); // could be null
 			BattleGroup group = new BattleGroup(owner);
 			
+			boolean goesLast=false;
+			if (owner!=null) {
+				if (owner.isCharacter() && (new CharacterWrapper(owner.getGameObject())).affectedByKey(Constants.COMBAT_GOES_LAST)) {
+					goesLast = true;
+				}
+			}
+			
 			// Put everyone in the list into the group
-			ArrayList list = lists.getList(ownerid);
-			for (Iterator n=list.iterator();n.hasNext();) {
-				RealmComponent rc = (RealmComponent)n.next();
+			ArrayList<RealmComponent> list = lists.getList(ownerid);
+			for (RealmComponent rc : list) {
 				group.addBattleParticipant((BattleChit)rc);
 			}
 			
 			// Add the group to the model
-			model.addBattleGroup(group);
+			model.addBattleGroup(group,goesLast);
 		}
 		return model;
 	}
@@ -627,9 +642,37 @@ public class RealmBattle {
 		model.doMeleeSetup();
 	}
 	
+	public static void raiseDeads(TileLocation location,GameData data) {
+		BattleModel model = buildBattleModel(location,data);
+		model.doRaiseDeads();
+	}
+	
+	public static void energizeDenizenPreBattleSpells(TileLocation location,GameData data) {
+		BattleModel model = buildBattleModel(location,data);
+		model.doEnergizeDenizenPreBattleSpells();
+	}
+	
+	public static void guildHideout(TileLocation location,GameData data) {
+		BattleModel model = buildBattleModel(location,data);
+		model.checkForGuildHideout();
+	}
+	
+	public static void checkForHurricaneWinds(TileLocation location,GameData data) {
+		BattleModel model = buildBattleModel(location,data);
+		for (RealmComponent rc : model.getAllBattleParticipants(true)) {
+			String blownSpellId = rc.getGameObject().getThisAttribute(Constants.BLOWS_TARGET);
+			if (blownSpellId!=null) {
+				model.blowTarget(blownSpellId, rc);
+			} else if (rc.getGameObject().hasThisAttribute(Constants.EVENT_HURRICANE_WINDS)) {
+				model.blowTarget(null, rc);
+			}
+		}
+	}
+	
 	public static void energizeSpells(TileLocation location,GameData data) {
 		BattleModel model = buildBattleModel(location,data);
-		model.doEnergizeSpells();
+		int combatRound = model.getBattleRound(Constants.COMBAT_POSITIONING);
+		model.doEnergizeSpells(combatRound);
 	}
 	
 	public static void fixSheetOwners(TileLocation location,GameData data) {
@@ -637,23 +680,32 @@ public class RealmBattle {
 		model.doFixSheetOwners();
 	}
 	
+	public static void endAttacksIfPeaceful(TileLocation location,GameData data) {
+		BattleModel model = buildBattleModel(location,data);
+		CombatWrapper tile = new CombatWrapper(location.tile.getGameObject());
+		if (tile.isPeaceClearing(location.clearing.getNum())) {
+			model.makePeace();
+		}
+	}
+	
 	public static void repositionTactics(TileLocation location,GameData data) {
 		logger.fine("----");
 		BattleModel model = buildBattleModel(location,data);
-		model.doRepositioningAndTactics();
+		int combatRound = model.getBattleRound(Constants.COMBAT_TACTICS);
+		model.doRepositioningAndTactics(combatRound);
 	}
 	
 	public static void resolveCombat(TileLocation location,GameData data) {
 		logger.fine("----");
 		CombatWrapper tile = new CombatWrapper(location.tile.getGameObject());
 		BattleModel model = buildBattleModel(location,data);
+		HostPrefWrapper hostPrefs = HostPrefWrapper.findHostPrefs(data);
 		
 		boolean fatigue = tile.getWasFatigue(); // from running characters (rare situation)
 		boolean spellCasting = false;
 		if (!fatigue) { // only continue if we got false on fatigue
-			ArrayList characters = model.getAllParticipatingCharacters();
-			for (Iterator i=characters.iterator();i.hasNext();) {
-				RealmComponent rc = (RealmComponent)i.next();
+			ArrayList<CharacterChitComponent> characters = model.getAllParticipatingCharacters();
+			for (RealmComponent rc : characters) {
 				CharacterWrapper character = new CharacterWrapper(rc.getGameObject());
 				Effort effortUsed = BattleUtility.getEffortUsed(character);
 				int free = character.getEffortFreeAsterisks();
@@ -664,8 +716,19 @@ public class RealmBattle {
 				
 				CombatWrapper combat = new CombatWrapper(rc.getGameObject());
 				if (combat.getCastSpell()!=null || combat.isBurnedColor()) {
-					spellCasting = true;
-					break;
+					if (!hostPrefs.hasPref(Constants.SR_ENDING_COMBAT)) {
+						spellCasting = true;
+						break;
+					}
+					GameObject spell = combat.getCastSpell();
+					if (spell!=null) {
+						SpellWrapper spellWrapper = new SpellWrapper(spell);
+						GameObject incantationObject = spellWrapper.getIncantationObject();
+						if (incantationObject!=null && RealmComponent.getRealmComponent(incantationObject).isActionChit()) {
+							spellCasting = true;
+							break;
+						}
+					}
 				}
 			}
 		}
@@ -673,13 +736,16 @@ public class RealmBattle {
 			tile.setWasFatigue(false);
 		}
 		
-		int hits = model.doResolveAttacks(tile.getHitResultCount()+1);
-		if (hits>0 || fatigue || spellCasting || model.wasSpellCasting()) {
+		int hits = model.doResolveAttacks(tile.getHitResultCount()+1,tile);
+		if (hits>0 || fatigue || spellCasting || (!hostPrefs.hasPref(Constants.SR_ENDING_COMBAT) && tile.getWasSpellCasting()) || (hostPrefs.hasPref(Constants.SR_ENDING_COMBAT) && tile.getWasUnhiding()) || (hostPrefs.hasPref(Constants.SR_ENDING_COMBAT) && tile.getTremendousMonsterFlippedRedSideUp())) {
 			tile.addHitResult();
 		}
 		else {
 			tile.addMissResult();
 		}
+		tile.setWasSpellCasting(false);
+		tile.setWasUnhiding(false);
+		tile.setTremendousMonsterFlippedRedSideUp(false);
 	}
 	public static boolean expireWishStrength(TileLocation location,GameData data) {
 		BattleModel model = buildBattleModel(location,data);
@@ -706,16 +772,15 @@ public class RealmBattle {
 			CombatFrame.broadcastMessage(RealmLogging.BATTLE,rom+" consecutive round"+(rom==1?"":"s")+" of no damage, fatigue, or spellcasting.");
 		}
 
+		HostPrefWrapper hostPrefs = HostPrefWrapper.findHostPrefs(data);
 		TileLocation test = getCurrentCombatLocation(data); // if test is null, then all characters in the clearing are dead!
-		if (test==null || (model.getAllOwningCharacters().isEmpty()) || (tile.lastTwoAreMisses() && !model.arePinningMonsters())) {
+		if (test==null || model.getAllOwningCharacters().isEmpty() || (tile.lastTwoAreMisses() && (hostPrefs.hasPref(Constants.SR_ENDING_COMBAT) || !model.arePinningMonsters())) || tile.isSleepClearing(location.clearing.getNum())) {
 			// Combat is over.  Move to the next clearing.
 			endCombatInClearing(location,data);
 			updateClearingOrder(data);
 			return false;
 		}
-		else {
-			logger.finer("Combat continues in "+location);
-		}
+		logger.finer("Combat continues in "+location);
 		return true;
 	}
 	/**
@@ -725,11 +790,8 @@ public class RealmBattle {
 	 * @return		true if combat still active
 	 */
 	public static boolean testCombatInClearing(TileLocation location,GameData data) {
-//System.out.println("RealmBattle:  testCombatInClearing for data "+data.toIdentifier());
 		BattleModel battleModel = buildBattleModel(location,data);
-//System.out.println("RealmBattle:  group count="+battleModel.getGroupCount(true));
 		if (battleModel.getGroupCount(false)==0) {
-//System.out.println("RealmBattle:  endCombatInClearing");
 			endCombatInClearing(location,data);
 			return false;
 		}
@@ -749,13 +811,19 @@ public class RealmBattle {
 //		CombatWrapper.clearAllCombatInfo(location.tile.getGameObject());
 		CombatWrapper cw = new CombatWrapper(location.tile.getGameObject());
 		cw.clearHitResults();
+		cw.clearKillResults();
 		cw.setWasFatigue(false);
+		cw.setWasSpellCasting(false);
+		cw.setWasUnhiding(false);
+		cw.setTremendousMonsterFlippedRedSideUp(false);
+		for (GameObject undead : cw.getRaisedUndeads()) {
+			RealmUtility.makeDead(RealmComponent.getRealmComponent(undead));
+		}
 		
 		// Need to clear out all monster combat info here too!
-		for (Iterator i=location.clearing.getClearingComponents().iterator();i.hasNext();) {
-			RealmComponent rc = (RealmComponent)i.next();
+		for (RealmComponent rc : location.clearing.getClearingComponents()) {
 			CombatWrapper.clearAllCombatInfo(rc.getGameObject());
-			rc.clearTarget();
+			rc.clearTargets();
 			
 			// Return monsters/natives to light side
 			if (rc.isMonster() || rc.isNative()) {
@@ -775,6 +843,18 @@ public class RealmBattle {
 					}
 				}
 			}
+			
+			if (rc.isMonster() && rc.getGameObject().hasThisAttribute(Constants.SERIOUS_WOUND)) {
+				GameClient.broadcastClient("host",rc.getName()+" returns to setup card");
+				SetupCardUtility.resetDenizen(rc.getGameObject());
+			}
+		}
+	}
+	
+	public static void autoPositionAttackers(TileLocation location,GameData data) {
+		if (CombatFrame.hasAutoPositioningAttackers()) {
+			BattleModel model = buildBattleModel(location,data);
+			model.autoPositioningForAttackers();
 		}
 	}
 }
