@@ -1,20 +1,3 @@
-/* 
- * RealmSpeak is the Java application for playing the board game Magic Realm.
- * Copyright (c) 2005-2015 Robin Warren
- * E-mail: robin@dewkid.com
- * 
- * This program is free software: you can redistribute it and/or modify it under the terms of the
- * GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
- * or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- * implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
- * for more details.
- * 
- * You should have received a copy of the GNU General Public License along with this program. If not, see
- *
- * http://www.gnu.org/licenses/
- */
 package com.robin.magic_realm.components.attribute;
 
 import java.util.ArrayList;
@@ -26,7 +9,16 @@ public class Score {
 	private int ownedPoints;
 	private int mult;
 	private int vps;
+	private boolean noPenalty = false;
 	private ArrayList<GameObject> scoringGameObjects;
+	public Score(int recordedPoints,int ownedPoints,int mult,int vps,ArrayList<GameObject> scoringGameObjects, boolean noPenalty) {
+		this.recordedPoints = recordedPoints;
+		this.ownedPoints = ownedPoints;
+		this.mult = mult;
+		this.vps = vps;
+		this.scoringGameObjects = scoringGameObjects;
+		this.noPenalty = noPenalty;
+	}
 	public Score(int recordedPoints,int ownedPoints,int mult,int vps,ArrayList<GameObject> scoringGameObjects) {
 		this.recordedPoints = recordedPoints;
 		this.ownedPoints = ownedPoints;
@@ -48,6 +40,9 @@ public class Score {
 	}
 	public int getScore() {
 		int score = getPoints() - getRequired();
+		if (noPenalty) {
+			return score;
+		}
 		return score<0?score*3:score;
 	}
 	public boolean hasPenalty() {
@@ -64,9 +59,12 @@ public class Score {
 	}
 	public int getBasicScore() {
 		double val = (double)getScore()/(double)getMultiplier();
-		return (new Double(Math.floor(val))).intValue();
+		return (Double.valueOf(Math.floor(val))).intValue();
 	}
 	public int getBonusScore() {
+		if (noPenalty) { 
+			return 0;
+		}
 		return vps>0?(getBasicScore()*vps):0;
 	}
 	public int getTotalScore() {
@@ -76,12 +74,12 @@ public class Score {
 		return getEarnedVictoryPoints(restrictToAssigned,false);
 	}
 	public int getEarnedVictoryPoints(boolean restrictToAssigned,boolean excludeStartingWorth) {
-		double p = (double)getPoints();
+		double p = getPoints();
 		if (excludeStartingWorth) {
 			p -= ownedPoints;
 		}
-		double val = p/(double)getMultiplier();
-		int earnedVps = (new Double(Math.floor(val))).intValue();
+		double val = p/getMultiplier();
+		int earnedVps = (Double.valueOf(Math.floor(val))).intValue();
 		if (restrictToAssigned) {
 			if (vps>0) {
 				earnedVps = Math.min(earnedVps,vps); // only get credit for the number of points you've assigned
@@ -95,9 +93,9 @@ public class Score {
 	public static void printResult(int score,int mult) {
 		double val = (double)score/(double)mult;
 		System.out.println("("+score+"/"+mult+")="+val);
-		System.out.println("Math.floor("+score+"/"+mult+")="+new Double(Math.floor(val)).intValue());
-		System.out.println("Math.ceil("+score+"/"+mult+")="+new Double(Math.ceil(val)).intValue());
-		System.out.println("Math.round("+score+"/"+mult+")="+new Double(Math.round(val)).intValue());
+		System.out.println("Math.floor("+score+"/"+mult+")="+Double.valueOf(Math.floor(val)).intValue());
+		System.out.println("Math.ceil("+score+"/"+mult+")="+Double.valueOf(Math.ceil(val)).intValue());
+		System.out.println("Math.round("+score+"/"+mult+")="+Double.valueOf(Math.round(val)).intValue());
 	}
 	public static void main(String[] args) {
 		printResult(-1,30);
