@@ -1,20 +1,3 @@
-/* 
- * RealmSpeak is the Java application for playing the board game Magic Realm.
- * Copyright (c) 2005-2015 Robin Warren
- * E-mail: robin@dewkid.com
- * 
- * This program is free software: you can redistribute it and/or modify it under the terms of the
- * GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
- * or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- * implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
- * for more details.
- * 
- * You should have received a copy of the GNU General Public License along with this program. If not, see
- *
- * http://www.gnu.org/licenses/
- */
 package com.robin.magic_realm.components.swing;
 
 import java.awt.*;
@@ -30,18 +13,21 @@ import com.robin.game.objects.GameObject;
 import com.robin.game.objects.GamePool;
 import com.robin.general.swing.AggressiveDialog;
 import com.robin.general.swing.ComponentTools;
+import com.robin.general.util.OrderedHashtable;
 import com.robin.general.util.StringUtilities;
 import com.robin.magic_realm.components.*;
+import com.robin.magic_realm.components.quest.Quest;
+import com.robin.magic_realm.components.quest.QuestMinorCharacter;
 import com.robin.magic_realm.components.utility.*;
 import com.robin.magic_realm.components.wrapper.CharacterWrapper;
 
 public class RealmTradeDialog extends AggressiveDialog {
 	private RealmComponent trader = null; // could be null
-	private ArrayList tradeComponents;
-	private JTable tradeTable;
+	private ArrayList<TradeComponent> tradeComponents;
+	public JTable tradeTable;
 	private int maxHeight;
 	
-	private Collection selectedTradeComponents = null;
+	private Collection<TradeComponent> selectedTradeComponents = null;
 	
 	private JButton cancelButton;
 	private JButton okayButton;
@@ -52,6 +38,7 @@ public class RealmTradeDialog extends AggressiveDialog {
 	
 	private boolean revealAll;
 	private boolean repairMode;
+	private boolean repairModeBlacksmith;
 	
 	private CharacterWrapper dealingCharacter;
 	
@@ -62,6 +49,7 @@ public class RealmTradeDialog extends AggressiveDialog {
 		this.forceSelection = forceSelection;
 		this.revealAll = true;
 		this.repairMode = false;
+		this.repairModeBlacksmith = false;
 		setDefaultCloseOperation(DO_NOTHING_ON_CLOSE);
 	}
 	public void setRevealAll(boolean val) {
@@ -70,8 +58,18 @@ public class RealmTradeDialog extends AggressiveDialog {
 	public void setRepairMode(boolean val) {
 		repairMode = val;
 	}
+	public void setRepairModeBlacksmith(boolean val) {
+		repairModeBlacksmith = val;
+	}
 	public void setDealingCharacter(CharacterWrapper character) {
 		dealingCharacter = character;
+	}
+	public RealmComponent getMarkedRealmComponentFromTradeTable() {
+		int selRow = tradeTable.getSelectedRow();
+		if (selRow>=0) {
+			return (tradeComponents.get(selRow)).realmComponent;
+		}
+		return null;
 	}
 	public RealmComponent getFirstSelectedRealmComponent() {
 		ArrayList<RealmComponent> sel = getSelectedRealmComponents();
@@ -82,9 +80,8 @@ public class RealmTradeDialog extends AggressiveDialog {
 	}
 	public ArrayList<RealmComponent> getSelectedRealmComponents() {
 		if (selectedTradeComponents!=null) {
-			ArrayList<RealmComponent> ret = new ArrayList<RealmComponent>();
-			for (Iterator i=selectedTradeComponents.iterator();i.hasNext();) {
-				TradeComponent tradeComponent = (TradeComponent)i.next();
+			ArrayList<RealmComponent> ret = new ArrayList<>();
+			for (TradeComponent tradeComponent : selectedTradeComponents) {
 				ret.add(tradeComponent.getRealmComponent());
 			}
 			return ret;
@@ -93,23 +90,21 @@ public class RealmTradeDialog extends AggressiveDialog {
 	}
 	public ArrayList<GameObject> getSelectedObjects() {
 		if (selectedTradeComponents!=null) {
-			ArrayList<GameObject> ret = new ArrayList<GameObject>();
-			for (Iterator i=selectedTradeComponents.iterator();i.hasNext();) {
-				TradeComponent tradeComponent = (TradeComponent)i.next();
+			ArrayList<GameObject> ret = new ArrayList<>();
+			for (TradeComponent tradeComponent : selectedTradeComponents) {
 				ret.add(tradeComponent.getRealmComponent().getGameObject());
 			}
 			return ret;
 		}
 		return null;
 	}
-	public void setTradeComponents(Collection components) {
+	public void setTradeComponents(Collection<RealmComponent> components) {
 		setTradeComponents(components,true);
 	}
-	public void setTradeComponents(Collection components,boolean sort) {
+	public void setTradeComponents(Collection<RealmComponent> components,boolean sort) {
 		maxHeight = 0;
-		tradeComponents = new ArrayList();
-		for (Iterator i=components.iterator();i.hasNext();) {
-			RealmComponent rc = (RealmComponent)i.next();
+		tradeComponents = new ArrayList<>();
+		for (RealmComponent rc : components) {
 			TradeComponent tc = new TradeComponent(rc);
 			if (tc.getSide1().getIconHeight()>maxHeight) {
 				maxHeight = tc.getSide1().getIconHeight();
@@ -118,11 +113,10 @@ public class RealmTradeDialog extends AggressiveDialog {
 		}
 		buildDialog(sort);
 	}
-	public void setTradeObjects(Collection objects) {
+	public void setTradeObjects(Collection<GameObject> objects) {
 		maxHeight = 0;
-		tradeComponents = new ArrayList();
-		for (Iterator i=objects.iterator();i.hasNext();) {
-			GameObject go = (GameObject)i.next();
+		tradeComponents = new ArrayList<>();
+		for (GameObject go  : objects) {
 			RealmComponent rc = RealmComponent.getRealmComponent(go);
 			TradeComponent tc = new TradeComponent(rc);
 			if (tc.getSide1().getIconHeight()>maxHeight) {
@@ -134,11 +128,9 @@ public class RealmTradeDialog extends AggressiveDialog {
 	}
 	private void buildDialog(boolean sort) {
 		if (sort) {
-			Collections.sort(tradeComponents,new Comparator() {
-				public int compare(Object o1,Object o2) {
-					TradeComponent t1 = (TradeComponent)o1;
+			Collections.sort(tradeComponents,new Comparator<TradeComponent>() {
+				public int compare(TradeComponent t1,TradeComponent t2) {
 					int bp1 = t1.getBasePrice()==null?0:t1.getBasePrice();
-					TradeComponent t2 = (TradeComponent)o2;
 					int bp2 = t2.getBasePrice()==null?0:t2.getBasePrice();
 					return bp1-bp2;
 				}
@@ -169,7 +161,7 @@ public class RealmTradeDialog extends AggressiveDialog {
 		tradeTable.setDefaultRenderer(Integer.class,new TradeTableIntegerRenderer());
 		int maxIconColWidth = 0;
 		for (int i=0;i<tradeComponents.size();i++) {
-			TradeComponent tc = (TradeComponent)tradeComponents.get(i);
+			TradeComponent tc = tradeComponents.get(i);
 			tradeTable.setRowHeight(i,tc.getSide1().getIconHeight()+2);
 			if (tc.getSide1().getIconWidth()>maxIconColWidth) {
 				maxIconColWidth = tc.getSide1().getIconWidth();
@@ -195,8 +187,8 @@ public class RealmTradeDialog extends AggressiveDialog {
 					if (ev.getClickCount()==2) {
 						int selRow = tradeTable.getSelectedRow();
 						if (selRow>=0) {
-							selectedTradeComponents = new ArrayList();
-							selectedTradeComponents.add((TradeComponent)tradeComponents.get(selRow));
+							selectedTradeComponents = new ArrayList<>();
+							selectedTradeComponents.add(tradeComponents.get(selRow));
 							close();
 						}
 					}
@@ -220,10 +212,10 @@ public class RealmTradeDialog extends AggressiveDialog {
 			okayButton = new JButton("Okay");
 			okayButton.addActionListener(new ActionListener() {
 				public void actionPerformed(ActionEvent ev) {
-					selectedTradeComponents = new ArrayList();
+					selectedTradeComponents = new ArrayList<>();
 					int[] selRow = tradeTable.getSelectedRows();
 					for (int i=0;i<selRow.length;i++) {
-						selectedTradeComponents.add((TradeComponent)tradeComponents.get(selRow[i]));
+						selectedTradeComponents.add(tradeComponents.get(selRow[i]));
 					}
 					close();
 				}
@@ -243,7 +235,7 @@ public class RealmTradeDialog extends AggressiveDialog {
 		if (tradeTable.getSelectedRowCount()==0) return false;
 
 		for (int selRow:tradeTable.getSelectedRows()) {
-			TradeComponent tc = (TradeComponent)tradeComponents.get(selRow);
+			TradeComponent tc = tradeComponents.get(selRow);
 			if (tc.isNoDeal()) return false;
 		}
 		
@@ -274,11 +266,21 @@ public class RealmTradeDialog extends AggressiveDialog {
 			else {
 				side2 = null;
 			}
-			if (repairMode && rc.isArmor() && ((ArmorChitComponent)rc).isDamaged()) {
-				basePrice = new Integer(TreasureUtility.getBaseRepairPrice((ArmorChitComponent)rc));
+			if (repairModeBlacksmith && rc.isArmor() && ((ArmorChitComponent)rc).isDamaged()) {
+				if (rc.getGameObject().hasThisAttribute(Constants.SHIELD)
+						|| rc.getGameObject().hasThisAttribute(Constants.HELMET)
+						|| rc.getGameObject().hasThisAttribute(Constants.BREASTPLATE)) {
+					basePrice = 5;
+				}
+				else {
+					basePrice = 10;
+				}
+			}
+			else if (repairMode && rc.isArmor() && ((ArmorChitComponent)rc).isDamaged()) {
+				basePrice = Integer.valueOf(TreasureUtility.getBaseRepairPrice((ArmorChitComponent)rc));
 			}
 			else {
-				basePrice = new Integer(TreasureUtility.getBasePrice(trader,rc));
+				basePrice = Integer.valueOf(TreasureUtility.getBasePrice(trader,rc));
 			}
 			if (dealingCharacter!=null && rc.isSpell() && !dealingCharacter.canLearn(rc.getGameObject())) {
 				noDeal = true;
@@ -318,6 +320,21 @@ public class RealmTradeDialog extends AggressiveDialog {
 					sb.append("DestroyedValue="+bp);
 				}
 			}
+			else if (realmComponent.isMinorCharacter()) {
+				if (realmComponent.getGameObject().hasAttributeBlock(Quest.QUEST_BLOCK)) {
+					OrderedHashtable<String, Object> questAttributes = realmComponent.getGameObject().getAttributeBlock(Quest.QUEST_BLOCK);
+					Object description = questAttributes.get(QuestMinorCharacter.DESCRIPTION);
+					if (description!=null) {
+						sb.append(description.toString());
+					}
+				}
+			}
+			else if (realmComponent.isNomad()) {
+				sb.append("Ability: "+realmComponent.getGameObject().getThisAttribute("text"));
+			}
+			else if (realmComponent.isTask()) {
+				sb.append(realmComponent.getGameObject().getThisAttribute(Constants.TASK)+": "+realmComponent.getGameObject().getThisAttributeList(Constants.TASK_SITES));
+			}
 			int fame = realmComponent.getGameObject().getThisInt("fame");
 			int not = realmComponent.getGameObject().getThisInt("notoriety");
 			if (fame>0) {
@@ -339,6 +356,7 @@ public class RealmTradeDialog extends AggressiveDialog {
 			setEditable(false);
 			setFont(new Font("Dialog",Font.PLAIN,20));
 			setWrapStyleWord(true);
+			setLineWrap(true);
 		}
 		public Component getTableCellRendererComponent(JTable table, Object value, boolean isSelected, boolean hasFocus, int row, int column) {
 			setBackground(isSelected?selBackground:background);
@@ -352,11 +370,11 @@ public class RealmTradeDialog extends AggressiveDialog {
 	
 	private class TradeTableIntegerRenderer extends DefaultTableCellRenderer {
 		public TradeTableIntegerRenderer() {
-			setHorizontalAlignment(JLabel.CENTER);
+			setHorizontalAlignment(SwingConstants.CENTER);
 		}
 		public Component getTableCellRendererComponent(JTable table, Object value, boolean isSelected, boolean hasFocus, int row, int column) {
 			Component cell = super.getTableCellRendererComponent(table,value,isSelected,hasFocus,row,column);
-			TradeComponent tc = (TradeComponent)tradeComponents.get(row);
+			TradeComponent tc = tradeComponents.get(row);
 			if (tc.isNoDeal()) {
 				cell.setForeground(Color.red);
 			}
@@ -400,7 +418,7 @@ public class RealmTradeDialog extends AggressiveDialog {
 		}
 		public Object getValueAt(int row, int col) {
 			if (row<getRowCount()) {
-				TradeComponent dsc = (TradeComponent)tradeComponents.get(row);
+				TradeComponent dsc = tradeComponents.get(row);
 				RealmComponent rc = dsc.getRealmComponent();
 				boolean showAll = revealAll || !rc.isTreasure() || ((TreasureCardComponent)rc).isFaceUp();
 				switch(col) {
@@ -415,7 +433,11 @@ public class RealmTradeDialog extends AggressiveDialog {
 					case 3:
 						return dsc.getSide2();
 					case 4:
-						return showAll?wrapString(dsc.getOtherInformation()):null;
+						String desc = dsc.getOtherInformation();
+						if (!rc.isMinorCharacter() && !rc.isNomad() && !rc.isTask()) {
+							desc = wrapString(desc);
+						}
+						return showAll?desc:null;
 				}
 			}
 			return null;
@@ -432,7 +454,7 @@ public class RealmTradeDialog extends AggressiveDialog {
 		RealmLoader loader = new RealmLoader();
 		System.out.println("Done");
 		
-		ArrayList objects = new ArrayList();
+		ArrayList<GameObject> objects = new ArrayList<>();
 		GamePool pool = new GamePool(loader.getData().getGameObjects());
 		objects.addAll(pool.find("armor,!character"));
 		objects.addAll(pool.find("horse,!native"));
