@@ -1,20 +1,3 @@
-/* 
- * RealmSpeak is the Java application for playing the board game Magic Realm.
- * Copyright (c) 2005-2015 Robin Warren
- * E-mail: robin@dewkid.com
- * 
- * This program is free software: you can redistribute it and/or modify it under the terms of the
- * GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
- * or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- * implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
- * for more details.
- * 
- * You should have received a copy of the GNU General Public License along with this program. If not, see
- *
- * http://www.gnu.org/licenses/
- */
 package com.robin.magic_realm.components.wrapper;
 
 import java.util.*;
@@ -39,18 +22,26 @@ public class HostPrefWrapper extends GameObjectWrapper {
 	public static final String PLAYERS_ALLOWED_TAG = "pl_allowed";
 	public static final String CHARACTERS_PER_PLAYER_TAG = "char_per_player";
 	public static final String NUMBER_OF_MONTHS_TO_PLAY = "n_mon_play";
+	public static final String VPS_FIXED = "vps_fixed";
 	public static final String VPS_TO_ACHIEVE = "vps_2_achv";
+	public static final String QUEST_CARDS_HAND_SIZE = "quest_card_hand_size";
 	public static final String ENABLE_BATTLES = "en_batt";
+	public static final String DISABLE_SUMMONING = "dis_summ";
 	public static final String ENABLE_AUTOSAVE = "en_autosave";
 	public static final String ENABLE_AUTO_SETUP = "en_autoset";
 	public static final String ENABLE_PLAYER_SETUP = "en_playset";
+	public static final String ALTERNATIVE_TILES = "al_tiles";
 	public static final String MIX_EXPANSION_TILES = "mx_ex_tiles";
 	public static final String INCLUDE_EXPANSION_SPELLS = "inc_ex_spells";
 	public static final String ENABLE_MULTI_BOARD = "en_multbrd";
 	public static final String NUMBER_OF_BOARDS_TO_USE = "n_brd_use";
 	public static final String MINIMUM_MAP_RATING = "min_mr";
 	public static final String INCLUDE_NEW_SPELLS = "inc_new_spells";
+	public static final String INCLUDE_NEW_SPELLS_2 = "inc_new_spells2";
+	public static final String INCLUDE_SR_SPELLS = "inc_sr_spells";
 	public static final String SWITCH_DAY_SPELLS = "upg_day_spells";
+	public static final String INCLUDE_EXPANSION_TREASURES = "inc_ex_treasures";
+	public static final String INCLUDE_SR_TREASURES = "inc_sr_treasures";
 //	public static final String REQ_VPS_PER_PLAYER = "rq_vps";
 	public static final String REQ_VPS_DISABLED = "rq_vps_off";
 	
@@ -64,8 +55,8 @@ public class HostPrefWrapper extends GameObjectWrapper {
 	public String getBlockName() {
 		return HOST_PREF_BLOCK;
 	}
-	public static Collection getKeyVals() {
-		ArrayList keyVals = new ArrayList();
+	public static Collection<String> getKeyVals() {
+		ArrayList<String> keyVals = new ArrayList<>();
 		keyVals.add(HOST_NAME_TAG);
 		return keyVals;
 	}
@@ -103,17 +94,29 @@ public class HostPrefWrapper extends GameObjectWrapper {
 	public String getGameKeyVals() {
 		return getString(GAME_KEYVALS_TAG);
 	}
+	public boolean usesSuperRealm() {
+		return getString(GAME_KEYVALS_TAG).contains(Constants.SUPER_REALM);
+	}
 	public String getGameSetupName() {
 		return getString(GAME_SETUP_NAME_TAG);
 	}
 	public int getNumberMonthsToPlay() {
 		return getInt(NUMBER_OF_MONTHS_TO_PLAY);
 	}
+	public boolean isFixedVps() {
+		return getBoolean(VPS_FIXED);
+	}
 	public int getVpsToAchieve() {
 		return getInt(VPS_TO_ACHIEVE);
 	}
+	public int getQuestCardsHandSize() {
+		return getInt(QUEST_CARDS_HAND_SIZE);
+	}
 	public boolean getEnableBattles() {
 		return getBoolean(ENABLE_BATTLES);
+	}
+	public boolean getDisableSummoning() {
+		return getBoolean(DISABLE_SUMMONING);
 	}
 	public boolean getAutosaveEnabled() {
 		return getBoolean(ENABLE_AUTOSAVE);
@@ -124,6 +127,9 @@ public class HostPrefWrapper extends GameObjectWrapper {
 	public boolean getBoardPlayerSetup() {
 		return getBoolean(ENABLE_PLAYER_SETUP);
 	}
+	public boolean getAlternativeTilesEnabled() {
+		return getBoolean(ALTERNATIVE_TILES);
+	}
 	public boolean getMixExpansionTilesEnabled() {
 		return getBoolean(MIX_EXPANSION_TILES);
 	}
@@ -133,8 +139,20 @@ public class HostPrefWrapper extends GameObjectWrapper {
 	public boolean getIncludeNewSpells() {
 		return getBoolean(INCLUDE_NEW_SPELLS);
 	}
+	public boolean getIncludeNewSpells2() {
+		return getBoolean(INCLUDE_NEW_SPELLS_2);
+	}
+	public boolean getIncludeSrSpells() {
+		return getBoolean(INCLUDE_SR_SPELLS);
+	}
 	public boolean getSwitchDaySpells() {
 		return getBoolean(SWITCH_DAY_SPELLS);
+	}
+	public boolean getIncludeExpansionTreasures() {
+		return getBoolean(INCLUDE_EXPANSION_TREASURES);
+	}
+	public boolean getIncludeSrTreasures() {
+		return getBoolean(INCLUDE_SR_TREASURES);
 	}
 	public boolean getMultiBoardEnabled() {
 		return getBoolean(ENABLE_MULTI_BOARD);
@@ -157,6 +175,33 @@ public class HostPrefWrapper extends GameObjectWrapper {
 	}
 	public String getStartingSeason() {
 		return getString(START_SEASON);
+	}
+	public boolean isUsingQuests() {
+		return getBoolean(Constants.QST_QUEST_CARDS) || getBoolean(Constants.QST_GUILD_QUESTS) || getBoolean(Constants.QST_BOOK_OF_QUESTS) || getBoolean(Constants.QST_SR_QUESTS);
+	}
+	public boolean isUsingQuestCards() {
+		return getBoolean(Constants.QST_QUEST_CARDS) || getBoolean(Constants.QST_SR_QUESTS);
+	}
+	public boolean isUsingBookOfQuests() {
+		return getBoolean(Constants.QST_BOOK_OF_QUESTS);
+	}
+	public boolean isUsingGuildQuests() {
+		return getBoolean(Constants.QST_GUILD_QUESTS);
+	}
+	public Constants.QuestDeckMode getQuestMode() {
+		if (getBoolean(Constants.QST_QUEST_CARDS)) {
+			return Constants.QuestDeckMode.QtR;
+		}
+		if (getBoolean(Constants.QST_BOOK_OF_QUESTS)) {
+			return Constants.QuestDeckMode.BoQ;
+		}
+		if (getBoolean(Constants.QST_GUILD_QUESTS)) {
+			return Constants.QuestDeckMode.GQ;
+		}
+		if (getBoolean(Constants.QST_SR_QUESTS)) {
+			return Constants.QuestDeckMode.SR;
+		}
+		return null;
 	}
 	
 	// Setters
@@ -196,14 +241,23 @@ public class HostPrefWrapper extends GameObjectWrapper {
 	public void setNumberMonthsToPlay(int val) {
 		setInt(NUMBER_OF_MONTHS_TO_PLAY,val);
 	}
+	public void setFixedVps(boolean val) {
+		setBoolean(VPS_FIXED,val);
+	}
 	public void setVpsToAchieveString(String val) {
 		setString(VPS_TO_ACHIEVE,val);
 	}
 	public void setVpsToAchieve(int val) {
 		setInt(VPS_TO_ACHIEVE,val);
 	}
+	public void setQuestCardsHandSize(String val) {
+		setString(QUEST_CARDS_HAND_SIZE,val);
+	}
 	public void setEnableBattles(boolean val) {
 		setBoolean(ENABLE_BATTLES,val);
+	}
+	public void setDisableSummoning(boolean val) {
+		setBoolean(DISABLE_SUMMONING,val);
 	}
 	public void setAutosaveEnabled(boolean val) {
 		setBoolean(ENABLE_AUTOSAVE,val);
@@ -214,6 +268,9 @@ public class HostPrefWrapper extends GameObjectWrapper {
 	public void setBoardPlayerSetup(boolean val) {
 		setBoolean(ENABLE_PLAYER_SETUP,val);
 	}
+	public void setAlternativeTilesEnabled(boolean val) {
+		setBoolean(ALTERNATIVE_TILES,val);
+	}
 	public void setMixExpansionTilesEnabled(boolean val) {
 		setBoolean(MIX_EXPANSION_TILES,val);
 	}
@@ -223,8 +280,20 @@ public class HostPrefWrapper extends GameObjectWrapper {
 	public void setIncludeNewSpells(boolean val) {
 		setBoolean(INCLUDE_NEW_SPELLS, val);
 	}
+	public void setIncludeNewSpells2(boolean val) {
+		setBoolean(INCLUDE_NEW_SPELLS_2, val);
+	}
+	public void setIncludeSrSpells(boolean val) {
+		setBoolean(INCLUDE_SR_SPELLS, val);
+	}
 	public void setSwitchDaySpells(boolean val) {
 		setBoolean(SWITCH_DAY_SPELLS, val);
+	}
+	public void setIncludeExpansionTreasures(boolean val) {
+		setBoolean(INCLUDE_EXPANSION_TREASURES, val);
+	}
+	public void setIncludeSrTreasures(boolean val) {
+		setBoolean(INCLUDE_SR_TREASURES, val);
 	}
 	public void setMultiBoardEnabled(boolean val) {
 		setBoolean(ENABLE_MULTI_BOARD,val);
@@ -254,11 +323,10 @@ public class HostPrefWrapper extends GameObjectWrapper {
 		return hasListItem(CHARACTER_KEY,key);
 	}
 	public ArrayList<String> getAllCharacterKeys() {
-		ArrayList list = getList(CHARACTER_KEY);
-		ArrayList<String> ret = new ArrayList<String>();
+		ArrayList<String> list = getList(CHARACTER_KEY);
+		ArrayList<String> ret = new ArrayList<>();
 		if (list!=null) {
-			for (Iterator i=list.iterator();i.hasNext();) {
-				String key = (String)i.next();
+			for (String key : list) {
 				ret.add(key);
 			}
 		}
@@ -287,10 +355,10 @@ public class HostPrefWrapper extends GameObjectWrapper {
 	public static HostPrefWrapper findHostPrefs(GameData data) {
 		if (HOST_PREF_ID==null) {
 			GamePool pool = new GamePool(data.getGameObjects());
-			Collection c = pool.extract(HostPrefWrapper.getKeyVals());
+			Collection<GameObject> c = pool.extract(HostPrefWrapper.getKeyVals());
 			if (c!=null && c.size()==1) {
-				GameObject hp = (GameObject)c.iterator().next();
-				HOST_PREF_ID = new Long(hp.getId());
+				GameObject hp = c.iterator().next();
+				HOST_PREF_ID = Long.valueOf(hp.getId());
 				return new HostPrefWrapper(hp);
 			}
 		}
